--- a/pg/iret/FO/ソルバーソーシング機能フローチャート.md
+++ b/pg/iret/FO/ソルバーソーシング機能フローチャート.md
@@ -1,7 +1,7 @@
-# 人材要件機能フローチャート（完全版）
+# ソルバーソーシング機能フローチャート（FY25対応版）
 
 ## 📋 概要
-人材要件機能（ソルバーソーシング機能）は、法人ソルバーが個人ソルバーの登録・管理を行うシステムです。
+ソルバーソーシング機能（人材要件機能）は、法人ソルバーが個人ソルバーの登録・管理を行うシステムです。
 法人ソルバーの情報管理から、所属する個人ソルバーの申請・承認・管理まで一貫したワークフローを提供します。
 
 ### 対象ユーザー（アクター）
@@ -21,289 +21,183 @@
 - 参照したPDF: 【FY25】ソルバーソーシング機能(対応範囲のみ）.pdf
 - 参照したSVG: ER図.drawio.svg、新業務フロー図.drawio.svg
 - 関連ソースコード: 
-  - `/ssap-partner-portal-fo-frontend/src/pages/solver/menu.vue` - ソルバーメニュー画面
-  - `/ssap-partner-portal-fo-frontend/src/pages/solver/application.vue` - 新規申請画面
+  - `/ssap-partner-portal-fo-frontend/src/pages/solver/` - ソルバー関連画面
   - `/ssap-partner-portal-fo-frontend/src/lang/ja.json` - 日本語ラベル定義
   - `/ssap-partner-portal-fo-backend/app/routers/solver.py` - APIエンドポイント
   - `/ssap-partner-portal-fo-backend/app/schemas/solver.py` - API仕様
   - `/ssap-partner-portal-fo-backend/app/models/solver.py` - データベースモデル
-  - `/ssap-partner-portal-fo-frontend/src/types/Solver.ts` - TypeScript型定義
 
 ---
 
-## 📋 人材要件機能 時系列アクションフロー（業務プロセス完全版）
+## 📊 メインフローチャート
 
-> **注意**: このフローには、システム操作だけでなく、実際の業務で必要となるオフライン作業（面接、審査、選定等）も含まれています。
-
-### 🔄 A. 人材発掘・ソルバー候補選定フロー（業務開始前）
-
-#### A-1. 人材要件定義・ソルバー発掘
-| 順番 | 誰が | アクション | 誰に | 詳細 |
-|-----|-----|-----------|-----|------|
-| 1 | APT | 案件要件分析 | 案件資料 | クライアントからの案件内容、必要スキル、期間を分析 |
-| 2 | APT | 人材要件定義 | 社内 | 必要な専門性、経験年数、業界知識を明文化 |
-| 3 | APT | ソルバー候補リストアップ | 外部ネットワーク | 既存のコネクション、外部データベースから候補者を選定 |
-| 4 | APT | 初回コンタクト | 候補者 | 電話・メール・LinkedInで案件概要を説明、関心度を確認 |
-| 5 | 候補者 | 案件興味度回答 | APT | 案件参加の意向、条件面での要望を回答 |
-| 6 | APT | 候補者スクリーニング | 社内 | 履歴書・経歴書の確認、基本要件マッチング |
-
-#### A-2. 候補者面接・評価プロセス
-| 順番 | 誰が | アクション | 誰に | 詳細 |
-|-----|-----|-----------|-----|------|
-| 7 | APT | 面接スケジュール調整 | 候補者 | 1次面接の日程調整（オンライン/オフライン） |
-| 8 | APT + 社内関係者 | 1次面接実施 | 候補者 | 人物評価、基本スキル確認、コミュニケーション能力チェック |
-| 9 | APT | 面接評価シート作成 | 社内 | 面接結果をスクリーニング8項目で評価・記録 |
-| 10 | 候補者 | 職歴詳細・実績資料提出 | APT | 詳細な職歴書、成果物、推薦状等を提出 |
-| 11 | APT | 実績・エビデンス検証 | 外部 | 提出資料の真偽確認、前職での実績を第三者確認 |
-| 12 | APT | クライテリア評価実施 | 社内 | 8項目のクライテリアに基づく詳細評価 |
-| 13 | APT | 専門性深堀面接実施 | 候補者 | 業界特有の知識・経験についての詳細ヒアリング |
-| 14 | APT | 過去プロジェクト実績確認 | 候補者 | 具体的な成果物、クライアント名、期間、役割の詳細確認 |
-| 15 | APT | 参考人確認・推薦状検証 | 前職関係者 | 候補者の実績・人物評価について第三者への確認 |
-
-#### A-3. 最終選考・条件調整
-| 順番 | 誰が | アクション | 誰に | 詳細 |
-|-----|-----|-----------|-----|------|
-| 16 | APT | 社内選考会議 | 社内関係者 | 候補者の評価結果を基に採用可否を判断 |
-| 17 | APT | 2次面接実施（必要時） | 候補者 | 上級職・専門性が必要な場合の追加面接 |
-| 18 | APT | 最終採用決定 | 社内 | 候補者の正式採用を決定 |
-| 19 | APT | 条件交渉 | 候補者 | 報酬、稼働率、契約期間等の条件を交渉・合意 |
-| 20 | 候補者 | 契約条件合意 | APT | 提示条件への最終同意 |
-| 21 | APT | 契約準備 | 法務・総務 | 契約書類の準備、法的確認 |
-| 22 | APT | 候補者への最終確認 | 候補者 | 契約内容、開始日、業務内容の最終確認 |
-| 23 | APT | クライアント承認取得 | クライアント | 選定した候補者についてクライアントの最終承認を取得 |
-| 24 | クライアント | 候補者承認・面談実施 | 候補者 | 必要に応じてクライアントと候補者の直接面談 |
-
-### 🔄 B. 新規個人ソルバー申請フロー（システム登録）
-
-#### B-1. システム初期設定
-| 順番 | 誰が | アクション | 誰に | 詳細 |
-|-----|-----|-----------|-----|------|
-| 19 | SOLVER_STAFF | ログイン | システム | JWT認証でシステムにアクセス |
-| 20 | システム | 認証確認 | SOLVER_STAFF | 権限（APT/SOLVER_STAFF）を検証 |
-| 21 | SOLVER_STAFF | メニュー画面表示要求 | システム | URL: /solver/menu にアクセス |
-| 22 | システム | メニュー画面表示 | SOLVER_STAFF | ソルバーメニュー画面をレンダリング |
-| 23 | SOLVER_STAFF | 法人ソルバー選択 | システム | プルダウンから「法人ソルバーを選択する」 |
-| 24 | システム | 法人情報チェック | データベース | 選択した法人の登録状況を確認 |
-
-#### B-2. 法人情報未登録時の初期設定
-| 順番 | 誰が | アクション | 誰に | 詳細 |
-|-----|-----|-----------|-----|------|
-| 25a | システム | 初期設定モーダル表示 | SOLVER_STAFF | 「法人ソルバー情報を入力してください」モーダル |
-| 26a | SOLVER_STAFF | 法人情報入力 | システム | 企業名、業種、設立等の基本情報を入力 |
-| 27a | システム | 法人情報保存 | データベース | API: POST /solver-corporations で保存 |
-| 28a | システム | 保存完了通知 | SOLVER_STAFF | 法人情報登録完了メッセージ表示 |
-
-#### B-3. 新規申請開始
-| 順番 | 誰が | アクション | 誰に | 詳細 |
-|-----|-----|-----------|-----|------|
-| 25 | SOLVER_STAFF | 新規申請ボタンクリック | システム | 「新規ソルバー申請」ボタンを押下 |
-| 26 | システム | 申請画面表示 | SOLVER_STAFF | URL: /solver/application に遷移 |
-| 27 | システム | フォーム初期化 | ブラウザ | 空の申請フォームを表示 |
-
-#### B-4. 面接結果・評価データの入力
-| 順番 | 誰が | アクション | 誰に | 詳細 |
-|-----|-----|-----------|-----|------|
-| 28 | SOLVER_STAFF | 基本情報入力 | システム | 面接で確認した正確な名前、ふりがな、性別、生年月日、職歴 |
-| 29 | SOLVER_STAFF | 面接評価結果入力 | システム | 事前面接で評価したスクリーニング8項目の結果を入力 |
-| 30 | SOLVER_STAFF | エビデンス詳細入力 | システム | 面接・資料確認で得たエビデンス（具体的な実績・経験）を入力 |
-| 31 | システム | リアルタイムバリデーション | SOLVER_STAFF | 入力値の形式チェック（メール、電話番号等） |
-| 32 | SOLVER_STAFF | プロフィール画像アップロード | システム | 候補者から提供された顔写真（jpg/png形式、2MB以下） |
-| 33 | システム | ファイルバリデーション | ファイル | ファイル形式・サイズチェック |
-| 34 | システム | S3アップロード | AWS S3 | パス: photos/{corporateId}/{fileKeyId}/ |
-| 35 | システム | ファイルキー生成 | システム | UUID形式のファイルキーIDを生成 |
-
-#### B-5. スクリーニング項目入力（面接評価反映）
-| 順番 | 誰が | アクション | 誰に | 詳細 |
-|-----|-----|-----------|-----|------|
-| 36 | SOLVER_STAFF | スクリーニング評価入力 | システム | 事前面接・資料確認で評価した8項目の「はい/いいえ」を入力 |
-| 37 | システム | 条件付きバリデーション | SOLVER_STAFF | 「はい」選択時はエビデンス入力必須の確認 |
-| 38 | SOLVER_STAFF | エビデンス詳細入力 | システム | 面接で確認した具体的な実績・経験をエビデンスとして詳述 |
-| 39 | システム | エビデンス必須チェック | システム | 「はい」項目にエビデンスが十分に入力されているか確認 |
-
-#### B-6. クライテリア項目入力（評価結果反映）
-| 順番 | 誰が | アクション | 誰に | 詳細 |
-|-----|-----|-----------|-----|------|
-| 40 | SOLVER_STAFF | クライテリア評価入力 | システム | 面接・審査で評価した8項目のエビデンスを詳細に入力 |
-| 41 | システム | 必須項目チェック | システム | クライテリア項目の入力完了を確認 |
-
-#### B-7. 申請実行・完了
-| 順番 | 誰が | アクション | 誰に | 詳細 |
-|-----|-----|-----------|-----|------|
-| 42 | SOLVER_STAFF | 確認画面遷移 | システム | 「確認画面に進む」ボタンクリック |
-| 43 | システム | 全項目バリデーション | データ | 32項目すべての必須項目チェック |
-| 44 | システム | 確認画面表示 | SOLVER_STAFF | 入力内容の最終確認画面を表示 |
-| 45 | SOLVER_STAFF | 申請実行 | システム | 「申請する」ボタンクリック |
-| 46 | システム | API呼び出し | バックエンド | POST /solvers でデータ保存 |
-| 47 | システム | データベース保存 | DynamoDB | SolverModelにデータを保存 |
-| 48 | システム | Salesforce連携 | 外部システム | 新規ソルバー登録メール送信 |
-| 49 | システム | 申請完了通知 | SOLVER_STAFF | 「申請が完了しました」メッセージ表示 |
+```mermaid
+%%{init: {'theme':'base', 'themeVariables': {'primaryColor':'#e1d5e7'}}}%%
+flowchart TD
+    Start([開始]) --> Auth[認証<br/>JWT Token確認]
+    Auth --> RoleCheck{ロール確認}
+    RoleCheck -->|APT| MenuFull[ソルバーメニュー画面<br/>全機能表示]
+    RoleCheck -->|SOLVER_STAFF| MenuLimited[ソルバーメニュー画面<br/>所属法人のみ]
+    
+    MenuFull --> SelectCorp[法人ソルバー選択]
+    MenuLimited --> SelectCorp
+    
+    SelectCorp --> CheckCorp{法人情報<br/>登録済み？}
+    CheckCorp -->|未登録| CorpModal[法人情報入力モーダル<br/>初期設定]
+    CheckCorp -->|登録済み| MenuOptions[メニュー選択]
+    
+    CorpModal --> SaveCorp[法人情報保存<br/>POST /solver-corporations]
+    SaveCorp --> MenuOptions
+    
+    MenuOptions --> |1| NewSolver[新規個人ソルバー申請]
+    MenuOptions --> |2| NewCandidate[新規ソルバー候補申請]
+    MenuOptions --> |3| SolverList[個人ソルバー一覧]
+    MenuOptions --> |4| CandidateList[ソルバー候補一覧]
+    MenuOptions --> |5| UpdateRate[稼働率・単価更新]
+    MenuOptions --> |6| CorpDetail[法人ソルバー情報詳細]
+    
+    NewSolver --> SolverFlow[個人ソルバー申請フロー]
+    NewCandidate --> CandidateFlow[ソルバー候補申請フロー]
+    SolverList --> ListFlow[一覧・詳細フロー]
+    CandidateList --> CandidateListFlow[候補管理フロー]
+    UpdateRate --> RateFlow[稼働率更新フロー]
+    CorpDetail --> CorpFlow[法人情報管理フロー]
+    
+    SolverFlow --> End([終了])
+    CandidateFlow --> End
+    ListFlow --> End
+    CandidateListFlow --> End
+    RateFlow --> End
+    CorpFlow --> End
+```
 
 ---
 
-### 🔄 C. ソルバー登録後の業務開始プロセス
+## 🔄 A. 個人ソルバー申請フロー
 
-#### C-1. 契約・オンボーディング
-| 順番 | 誰が | アクション | 誰に | 詳細 |
-|-----|-----|-----------|-----|------|
-| 50 | APT | 正式契約書作成 | 法務 | 合意した条件に基づく契約書を作成 |
-| 51 | 法務 | 契約書レビュー | APT | 法的問題がないか契約書を最終確認 |
-| 52 | APT | 契約書送付 | 個人ソルバー | 正式契約書を個人ソルバーに送付 |
-| 53 | 個人ソルバー | 契約書確認・署名 | APT | 契約内容を確認し、署名・返送 |
-| 54 | APT | 契約締結完了 | 社内 | 契約書の相互署名で契約成立 |
-| 55 | APT | オンボーディング準備 | 社内 | 業務開始に向けた準備（アカウント作成、資料準備等） |
-| 56 | APT | 業務環境準備 | 社内・個人ソルバー | 必要なツール、システムアクセス権限の設定 |
-| 57 | APT | プロジェクト資料提供 | 個人ソルバー | 案件概要、スケジュール、成果物仕様書等を提供 |
-| 58 | APT | キックオフミーティング実施 | 個人ソルバー | プロジェクト概要、役割、進め方を説明 |
-| 59 | 個人ソルバー | 秘密保持契約締結 | APT | 案件に関する機密保持契約を締結 |
-| 60 | 個人ソルバー | 業務理解・質疑応答 | APT | 案件内容、期待する成果について詳細確認 |
-
-#### C-2. 業務開始・進捗管理
-| 順番 | 誰が | アクション | 誰に | 詳細 |
-|-----|-----|-----------|-----|------|
-| 61 | APT | 業務開始通知 | クライアント | ソルバーのアサインと業務開始を報告 |
-| 62 | 個人ソルバー | 業務開始 | クライアント | 実際のプロジェクト業務を開始 |
-| 63 | APT | 初期進捗確認 | 個人ソルバー | 開始1週間後の状況、課題、サポート要望の確認 |
-| 64 | APT | 定期進捗確認 | 個人ソルバー | 週次/月次での業務進捗、課題を確認 |
-| 65 | 個人ソルバー | 進捗レポート提出 | APT | 業務の進捗状況、成果、課題を報告 |
-| 66 | APT | クライアント報告 | クライアント | ソルバーの業務進捗をクライアントに報告 |
-| 67 | クライアント | フィードバック提供 | APT | ソルバーの業務品質、パフォーマンスを評価 |
-| 68 | APT | 中間評価・改善提案 | 個人ソルバー | プロジェクト中間期での評価とパフォーマンス改善提案 |
-| 69 | APT | 追加支援・リソース提供 | 個人ソルバー | 必要に応じて追加のサポート、情報、リソースを提供 |
-
-#### C-3. 継続的な関係管理・品質管理
-| 順番 | 誰が | アクション | 誰に | 詳細 |
-|-----|-----|-----------|-----|------|
-| 70 | APT | 月次パフォーマンスレビュー | 個人ソルバー・クライアント | 月次での成果、課題、改善点について三者レビュー |
-| 71 | APT | スキルアップ支援プログラム提供 | 個人ソルバー | 新しい技術、手法、業界トレンドに関する研修機会の提供 |
-| 72 | APT | ネットワーキング機会提供 | 個人ソルバー | 他のソルバー、業界専門家とのネットワーキング機会の提供 |
-| 73 | APT | 次期案件の提案・マッチング | 個人ソルバー | 現在のプロジェクト終了後の次期案件の提案 |
-| 74 | 個人ソルバー | 自己開発・キャリア相談 | APT | キャリア目標、スキル開発に関する相談・アドバイス要請 |
-| 75 | APT | 長期関係維持戦略検討 | 社内 | 優秀なソルバーとの長期的なパートナーシップ維持戦略 |
-
-#### C-4. プロジェクト終了・フォローアップ
-| 順番 | 誰が | アクション | 誰に | 詳細 |
-|-----|-----|-----------|-----|------|
-| 76 | APT | プロジェクト終了レビュー実施 | 個人ソルバー・クライアント | プロジェクトの成果、学び、改善点について総括レビュー |
-| 77 | クライアント | 最終評価・推薦状作成 | APT | ソルバーの最終的なパフォーマンス評価と推薦状作成 |
-| 78 | APT | ナレッジベース・ベストプラクティス集約 | 社内 | プロジェクトで得られた知見、ノイハウを社内で共有 |
-| 79 | APT | ソルバーデータベース更新 | システム | プロジェクト実績、評価、スキル情報をデータベースに更新 |
-| 80 | APT | 次期連携可能性検討 | 個人ソルバー | 将来のプロジェクトでの連携可能性、条件、タイミングの検討 |
-
-### 🔄 D. ソルバー候補管理フロー（簡易登録）
-
-#### D-1. 候補者申請
-| 順番 | 誰が | アクション | 誰に | 詳細 |
-|-----|-----|-----------|-----|------|
-| 1 | SOLVER_STAFF | 候補者一覧表示要求 | システム | 「ソルバー候補」メニューをクリック |
-| 2 | システム | 候補者一覧表示 | SOLVER_STAFF | GET /solvers?solverType=solver_candidate |
-| 3 | SOLVER_STAFF | 新規候補申請 | システム | 「新規ソルバー候補申請」ボタンクリック |
-| 4 | SOLVER_STAFF | 候補者基本情報入力 | システム | 初回面接前の基本情報（ふりがな、案件ID、生年月日、職歴、専門テーマ、実績） |
-| 5 | システム | 候補者バリデーション | データ | mode="create_candidate"でのバリデーション実行 |
-| 6 | システム | 候補者データ保存 | データベース | POST /solvers でmode="create_candidate" |
-| 7 | システム | 候補者一覧更新 | SOLVER_STAFF | 新規候補者を一覧に追加表示 |
-
-#### D-2. 候補者から個人ソルバーへの昇格（詳細面接後）
-| 順番 | 誰が | アクション | 誰に | 詳細 |
-|-----|-----|-----------|-----|------|
-| 8 | SOLVER_STAFF | 候補者詳細表示 | システム | 候補者名をクリックして詳細画面へ |
-| 9 | システム | 候補者詳細表示 | SOLVER_STAFF | GET /solvers/{solver_id} で詳細データ取得 |
-| 10 | SOLVER_STAFF | 面接・審査実施 | 候補者 | 詳細面接、スクリーニング・クライテリア評価を実施 |
-| 11 | SOLVER_STAFF | 個人ソルバー登録判断 | システム | 面接結果を基に「個人ソルバーに登録する」ボタンクリック |
-| 12 | システム | 確認モーダル表示 | SOLVER_STAFF | 「個人ソルバーへの登録」確認ダイアログ |
-| 13 | システム | 注意事項表示 | SOLVER_STAFF | 「登録後はソルバー候補一覧からは削除されます」 |
-| 14 | SOLVER_STAFF | 昇格確定 | システム | 確認モーダルで「登録する」ボタンクリック |
-| 15 | システム | ステータス更新 | データベース | PATCH /solvers/{solver_id} でis_solver=true |
-| 16 | システム | 候補者一覧から削除 | SOLVER_STAFF | 候補者一覧画面から該当者を除外 |
-| 17 | システム | 個人ソルバー一覧に追加 | SOLVER_STAFF | 個人ソルバー一覧に新規登録者を表示 |
-| 18 | SOLVER_STAFF | 詳細情報入力開始 | システム | 面接結果を基に32項目の詳細情報を入力（Bフローに続く） |
+```mermaid
+%%{init: {'theme':'base', 'themeVariables': {'primaryColor':'#e1d5e7'}}}%%
+flowchart TD
+    Start([申請開始]) --> AppScreen[申請画面表示<br/>URL: /solver/application]
+    AppScreen --> InputBasic[基本情報入力<br/>32項目]
+    
+    InputBasic --> InputDetail[詳細情報入力]
+    InputDetail --> InputScreen[スクリーニング項目<br/>8項目（はい/いいえ + エビデンス）]
+    InputScreen --> InputCriteria[クライテリア項目<br/>8項目（エビデンス）]
+    
+    InputCriteria --> SaveOption{保存方法選択}
+    SaveOption -->|一時保存| TempSave[一時保存処理<br/>registration_status="temporary_saving"]
+    SaveOption -->|確認画面へ| Validate[バリデーション実行]
+    
+    TempSave --> SaveAPI[POST /solvers<br/>mode="create_solver"]
+    SaveAPI --> TempSuccess[一時保存完了]
+    TempSuccess --> End([終了])
+    
+    Validate --> CheckValid{バリデーション<br/>成功？}
+    CheckValid -->|NG| ShowError[エラー表示<br/>必須項目確認]
+    ShowError --> InputBasic
+    
+    CheckValid -->|OK| Confirm[確認画面表示]
+    Confirm --> Submit[申請実行]
+    Submit --> PostAPI[POST /solvers<br/>mode="create_solver"<br/>registration_status="saved"]
+    
+    PostAPI --> CheckPost{API処理<br/>成功？}
+    CheckPost -->|成功| Success[申請完了<br/>Salesforce連携]
+    CheckPost -->|失敗| APIError[エラー処理]
+    
+    Success --> End
+    APIError --> End
+```
 
 ---
 
-### 🔄 E. 稼働率・単価更新フロー（月次業務プロセス）
+## 🔄 B. ソルバー候補申請フロー
 
-#### E-0. 月次情報収集・分析（システム更新前）
-| 順番 | 誰が | アクション | 誰に | 詳細 |
-|-----|-----|-----------|-----|------|
-| 1 | APT | 月次稼働状況ヒアリング | 個人ソルバー | 各ソルバーの実際稼働状況、来月の予定をヒアリング |
-| 2 | 個人ソルバー | 稼働状況・予定報告 | APT | 現在のプロジェクト状況、来月以降の予定を報告 |
-| 3 | APT | マーケット単価調査 | 外部情報 | 業界全体の単価動向、競合他社の料金水準を調査 |
-| 4 | APT | クライアントフィードバック収集 | クライアント | ソルバーのパフォーマンス評価、料金に対する意見を収集 |
-| 5 | APT | 単価改定提案準備 | 社内 | パフォーマンス、市場価格、クライアント評価を踏まえた単価改定案を作成 |
-
-#### E-1. 更新前の時間調整・交渉
-| 順番 | 誰が | アクション | 誰に | 詳細 |
-|-----|-----|-----------|-----|------|
-| 6 | APT | 個別単価交渉 | 個人ソルバー | パフォーマンス向上や市場価格を踏まえた単価調整の提案・交渉 |
-| 7 | 個人ソルバー | 単価改定に対する意見表明 | APT | 提案された単価に対する意見、要望、交渉 |
-| 8 | APT | クライアントへの単価調整相談 | クライアント | 必要に応じてクライアントへの料金調整相談 |
-| 9 | APT | 最終単価決定・合意 | 個人ソルバー | 交渉結果を踏まえた最終的な単価決定と合意形成 |
-
-### 🔄 F. 稼働率・単価更新フロー（システム操作）
-
-#### F-1. 更新画面表示
-| 順番 | 誰が | アクション | 誰に | 詳細 |
-|-----|-----|-----------|-----|------|
-| 10 | SOLVER_STAFF | 稼働率更新メニュー選択 | システム | 「稼働率・単価更新」ボタンクリック |
-| 11 | システム | 更新対象データ取得 | データベース | GET /solvers で所属個人ソルバー一覧取得 |
-| 12 | システム | 更新画面表示 | SOLVER_STAFF | テーブル形式で個人ソルバー一覧を表示 |
-
-#### F-2. 稼働率・単価入力
-| 順番 | 誰が | アクション | 誰に | 詳細 |
-|-----|-----|-----------|-----|------|
-| 13 | SOLVER_STAFF | 稼働率入力 | システム | 今月・来月の稼働率（0-100%）を入力 |
-| 14 | SOLVER_STAFF | 単価入力 | システム | 人月単価・時間単価（上限・下限）を入力 |
-| 15 | システム | リアルタイムバリデーション | SOLVER_STAFF | 数値範囲、上限≥下限の制約チェック |
-
-#### F-3. 一括更新実行
-| 順番 | 誰が | アクション | 誰に | 詳細 |
-|-----|-----|-----------|-----|------|
-| 16 | SOLVER_STAFF | 一括更新実行 | システム | 「一括更新」ボタンクリック |
-| 17 | システム | 全データバリデーション | データ | 入力値の妥当性を最終確認 |
-| 18 | システム | API呼び出し | バックエンド | PUT /solvers/utilization-rate/{solver_corporation_id} |
-| 19 | システム | 楽観ロック制御 | データベース | Versionによる同時更新制御 |
-| 20 | システム | 一括更新実行 | DynamoDB | 複数ソルバーの稼働率・単価を同時更新 |
-| 21 | システム | 更新結果判定 | システム | 成功・失敗・部分的成功を判定 |
-| 22 | システム | 更新完了通知 | SOLVER_STAFF | 「更新が完了しました」または エラーメッセージ |
+```mermaid
+%%{init: {'theme':'base', 'themeVariables': {'primaryColor':'#e1d5e7'}}}%%
+flowchart TD
+    Start([候補申請開始]) --> CandScreen[候補申請画面<br/>URL: /solver/candidate/application]
+    CandScreen --> MultiInput[複数人同時入力<br/>基本情報のみ]
+    
+    MultiInput --> AddMore{追加登録？}
+    AddMore -->|はい| AddPerson[人数追加<br/>フォーム複製]
+    AddMore -->|いいえ| ValidateCand[バリデーション実行]
+    
+    AddPerson --> MultiInput
+    
+    ValidateCand --> CheckCand{検証OK？}
+    CheckCand -->|NG| CandError[エラー表示]
+    CheckCand -->|OK| SubmitCand[一括申請]
+    
+    CandError --> MultiInput
+    
+    SubmitCand --> PostCand[POST /solvers<br/>mode="create_candidate"<br/>複数人データ送信]
+    PostCand --> CandSuccess[候補登録完了]
+    CandSuccess --> End([終了])
+```
 
 ---
 
-### 🔄 G. エラーハンドリングフロー
+## 🔄 C. ソルバー候補管理フロー
 
-#### G-1. バリデーションエラー（HTTPステータス: 400）
-| 順番 | 誰が | アクション | 誰に | 詳細 |
-|-----|-----|-----------|-----|------|
-| 1 | システム | エラー種別判定 | システム | リクエストデータの検証結果を判定 |
-| 2 | システム | エラーメッセージ生成 | システム | 具体的なエラー内容を特定 |
-| 3 | システム | エラー表示 | SOLVER_STAFF | 「{項目名} is required.」等の詳細メッセージ |
-| 4 | SOLVER_STAFF | エラー修正 | システム | 指摘された項目を修正して再入力 |
-| 5 | システム | 再バリデーション | データ | 修正後のデータを再度検証 |
+```mermaid
+%%{init: {'theme':'base', 'themeVariables': {'primaryColor':'#e1d5e7'}}}%%
+flowchart TD
+    Start([候補管理開始]) --> CandList[候補一覧画面<br/>URL: /solver/candidate/list/{corporationId}]
+    CandList --> SelectCand[候補者選択]
+    SelectCand --> CandDetail[候補詳細画面<br/>URL: /solver/candidate/{solverId}]
+    
+    CandDetail --> Action{アクション選択}
+    Action -->|編集| EditCand[候補情報編集]
+    Action -->|認定| CertifyStart[個人ソルバー認定開始]
+    Action -->|削除| DeleteCand[候補削除]
+    
+    EditCand --> UpdateCand[PUT /solvers/{solver_id}]
+    UpdateCand --> CandList
+    
+    DeleteCand --> ConfirmDel{削除確認}
+    ConfirmDel -->|はい| DelAPI[DELETE /solvers/{solver_id}]
+    ConfirmDel -->|いいえ| CandDetail
+    DelAPI --> CandList
+    
+    CertifyStart --> CertScreen[認定画面<br/>URL: /solver/candidate/certification/{solverId}]
+    CertScreen --> FillDetails[詳細情報入力<br/>32項目すべて]
+    FillDetails --> CertConfirm[認定確認]
+    CertConfirm --> PatchAPI[PATCH /solvers/{solver_id}<br/>is_solver=true]
+    PatchAPI --> CertSuccess[認定完了<br/>個人ソルバーへ移行]
+    CertSuccess --> End([終了])
+```
 
-#### G-2. 権限エラー（HTTPステータス: 403）
-| 順番 | 誰が | アクション | 誰に | 詳細 |
-|-----|-----|-----------|-----|------|
-| 1 | システム | 権限チェック | ユーザー | JWT Tokenの権限情報を確認 |
-| 2 | システム | アクセス拒否 | SOLVER_STAFF | 「アクセス権限がありません」メッセージ |
-| 3 | システム | 403エラーページ表示 | SOLVER_STAFF | 権限不足による画面表示 |
-| 4 | SOLVER_STAFF | 適切な権限でログイン | システム | APTまたはSOLVER_STAFFでの再ログイン |
+---
 
-#### G-3. 更新競合エラー（HTTPステータス: 409）
-| 順番 | 誰が | アクション | 誰に | 詳細 |
-|-----|-----|-----------|-----|------|
-| 1 | システム | 楽観ロック検証 | データベース | DynamoDBのVersionAttributeをチェック |
-| 2 | システム | 競合検出 | システム | 他のユーザーによる同時更新を検出 |
-| 3 | システム | 競合エラー通知 | SOLVER_STAFF | 「更新が競合した為、処理に失敗しました」 |
-| 4 | システム | 最新データ取得 | データベース | 現在の最新データを再取得 |
-| 5 | SOLVER_STAFF | 最新データで再入力 | システム | 更新された内容を反映して再度入力 |
+## 🔄 D. 稼働率・単価更新フロー
 
-#### G-4. ファイルアップロードエラー
-| 順番 | 誰が | アクション | 誰に | 詳細 |
-|-----|-----|-----------|-----|------|
-| 1 | SOLVER_STAFF | ファイル選択 | システム | jpg/png形式の画像ファイルを選択 |
-| 2 | システム | ファイル検証 | ファイル | 形式（jpg/png）・サイズ（2MB以下）をチェック |
-| 3 | システム | エラー検出 | システム | 形式不正またはサイズ超過を検出 |
-| 4 | システム | エラーメッセージ表示 | SOLVER_STAFF | 「jpg, png形式で2MB以下のファイルを選択してください」 |
-| 5 | SOLVER_STAFF | 適切なファイル再選択 | システム | 条件を満たすファイルに変更 |
-| 6 | システム | S3アップロード | AWS S3 | 検証済みファイルをS3にアップロード |
+```mermaid
+%%{init: {'theme':'base', 'themeVariables': {'primaryColor':'#e1d5e7'}}}%%
+flowchart TD
+    Start([更新開始]) --> RateScreen[稼働率更新画面<br/>URL: /solver/utilization-rate/{corporationId}]
+    RateScreen --> LoadSolvers[所属ソルバー一覧取得<br/>GET /solvers]
+    
+    LoadSolvers --> DisplayTable[テーブル表示<br/>一括編集可能]
+    DisplayTable --> EditRates[稼働率・単価編集]
+    
+    EditRates --> ValidateRates{入力検証}
+    ValidateRates -->|NG| RateError[エラー表示<br/>・数値範囲<br/>・上限≥下限]
+    ValidateRates -->|OK| SubmitRates[一括更新実行]
+    
+    RateError --> EditRates
+    
+    SubmitRates --> PutRate[PUT /solvers/utilization-rate/{corporationId}]
+    PutRate --> CheckLock{楽観ロック<br/>チェック}
+    
+    CheckLock -->|競合あり| Conflict[更新競合エラー<br/>HTTPステータス: 409]
+    CheckLock -->|OK| UpdateSuccess[更新成功]
+    
+    Conflict --> Reload[最新データ再取得]
+    Reload --> DisplayTable
+    
+    UpdateSuccess --> End([終了])
+```
 
 ---
 
@@ -316,11 +210,12 @@
 | ラベル名（表示） | ソース上の名称 | 動作 | 次の遷移先 |
 |----------------|--------------|------|-----------|
 | 法人ソルバーを選択する | solverCorporationSelector | 法人ソルバー選択 | 各機能へ |
-| 法人ソルバー情報詳細 | solverCorporationInfo | 法人情報の確認・編集 | 法人ソルバー詳細 |
-| 新規ソルバー申請 | newSolverApplication | 新規個人ソルバー申請 | 申請画面 |
-| ソルバー一覧 | solverList | 個人ソルバーの管理 | 個人ソルバー一覧 |
-| ソルバー候補 | solverCandidate | 候補者の管理 | ソルバー候補一覧 |
-| 稼働率・単価更新 | utilizationRateUpdate | 稼働率・単価の更新 | 更新画面 |
+| 新規個人ソルバー申請 | newSolverApplication | 新規個人ソルバー申請 | /solver/application |
+| 新規ソルバー候補申請 | newCandidateApplication | 新規候補申請 | /solver/candidate/application |
+| 個人ソルバー一覧 | solverList | 個人ソルバーの管理 | /solver/list/{corporationId} |
+| ソルバー候補一覧 | candidateList | 候補者の管理 | /solver/candidate/list/{corporationId} |
+| 個人ソルバー稼働率・単価更新 | utilizationRateUpdate | 稼働率・単価の更新 | /solver/utilization-rate/{corporationId} |
+| 法人ソルバー情報詳細 | corporationDetail | 法人情報の確認・編集 | /solver/corporation/{corporationId} |
 
 ### 2. 新規個人ソルバー申請画面（URL: /solver/application）
 **ソースファイル**: `src/pages/solver/application.vue`
@@ -329,279 +224,131 @@
 | 項目名（表示） | フィールド名 | 必須/任意 | バリデーション |
 |--------------|-------------|----------|--------------|
 | 個人ソルバー名 | name | 必須 | 文字数制限 |
-| 個人ソルバーかな | nameKana | 必須 | ひらがな |
-| 性別 | gender | 必須 | 選択肢 |
-| 生年月日 | dateOfBirth | 必須 | 日付形式 |
-| 役職 | post | 任意 | 文字数制限 |
-| 連絡先メールアドレス | mail | 任意 | メール形式 |
-| 電話番号 | phoneNumber | 任意 | 電話番号形式 |
-| 個人ソルバー画像 | facePhoto | 任意 | ファイル形式・サイズ |
-| 学歴 | education | 任意 | テキスト |
-| 職歴 | workHistory | 必須 | テキスト |
-| 専門テーマ | specialTheme | 任意 | テキスト |
-| 主な実績 | mainAchievements | 任意 | テキスト |
-| 英語レベル | englishLevel | 任意 | 選択肢 |
-| 東証33業種経験 | tse33Experience | 任意 | 複数選択 |
-| 課題マップ50 | issueMap50 | 任意 | 複数選択 |
-| 稼働状況 | operatingStatus | 任意 | 選択肢 |
+| 個人ソルバーかな | name_kana | 必須 | ひらがな |
+| 性別 | sex | 必須 | 選択肢 |
+| 生年月日 | birth_day | 必須 | 日付形式 |
+| 役職 | title | 任意 | 文字数制限 |
+| 連絡先メールアドレス | email | 任意 | メール形式 |
+| 電話番号 | phone | 任意 | 電話番号形式 |
+| 個人ソルバー画像 | face_photo | 任意 | ファイル形式・サイズ |
+| 学歴 | academic_background | 任意 | テキスト |
+| 職歴 | work_history | 必須 | テキスト |
+| 専門テーマ | specialized_themes | 任意 | テキスト |
+| 主な実績 | main_achievements | 任意 | テキスト |
+| 英語レベル | english_level | 任意 | 選択肢 |
+| 東証33業種経験 | tsi_areas | 任意 | 複数選択 |
+| 課題マップ50 | issue_map50 | 任意 | 複数選択 |
+| 稼働状況 | operating_status | 任意 | 選択肢 |
 
 #### スクリーニング項目（8項目）:
 | 項目名（表示） | フィールド名 | 入力形式 |
 |--------------|-------------|---------|
-| Sony Acceleration Platformで新規事業分野における支援実績がある | sapSupportAchievement | 評価（はい/いいえ） + エビデンス |
-| 大企業の新規事業分野における支援実績がある | newBizSupportAchievement | 評価（はい/いいえ） + エビデンス |
-| 大企業の新規事業において同一クライアントとのリピート実績がある | repeatAchievement | 評価（はい/いいえ） + エビデンス |
-| 大企業の新規事業分野において複数の実績がある | newBizAchievements | 評価（はい/いいえ） + エビデンス |
-| 大企業など新規事業分野における正社員（リーダー）として自ら立ち上げ経験がある | newBizLeaderExperience | 評価（はい/いいえ） + エビデンス |
-| 大企業など新規事業分野における正社員（メンバー）としての経験がある | newBizMemberExperience | 評価（はい/いいえ） + エビデンス |
-| 大企業などでリーダーとしての事業化経験があり、さらに黒字化の経験がある | leaderProfitExperience | 評価（はい/いいえ） + エビデンス |
-| 大企業などでメンバーとしての事業化経験があり、さらに黒字化の経験がある | memberProfitExperience | 評価（はい/いいえ） + エビデンス |
+| Sony Acceleration Platformで新規事業分野における支援実績がある | screening_1 | 評価（はい/いいえ） + エビデンス |
+| 大企業の新規事業分野における支援実績がある | screening_2 | 評価（はい/いいえ） + エビデンス |
+| 大企業の新規事業において同一クライアントとのリピート実績がある | screening_3 | 評価（はい/いいえ） + エビデンス |
+| 大企業の新規事業分野において複数の実績がある | screening_4 | 評価（はい/いいえ） + エビデンス |
+| 大企業など新規事業分野における正社員（リーダー）として自ら立ち上げ経験がある | screening_5 | 評価（はい/いいえ） + エビデンス |
+| 大企業など新規事業分野における正社員（メンバー）としての経験がある | screening_6 | 評価（はい/いいえ） + エビデンス |
+| 大企業などでリーダーとしての事業化経験があり、さらに黒字化の経験がある | screening_7 | 評価（はい/いいえ） + エビデンス |
+| 大企業などでメンバーとしての事業化経験があり、さらに黒字化の経験がある | screening_8 | 評価（はい/いいえ） + エビデンス |
 
 #### クライテリア項目（8項目）:
 | 項目名（表示） | フィールド名 | 入力形式 |
 |--------------|-------------|---------|
-| 実践的なノウハウ | practicalKnowhow | エビデンス（テキスト） |
-| タイムリーな実行力 | timelyExecution | エビデンス（テキスト） |
-| 顧客ファースト | customerFirst | エビデンス（テキスト） |
-| 高い品質と顧客からの信頼 | qualityTrust | エビデンス（テキスト） |
-| 新たな事業機会や成長機会を創出する力 | growthOpportunity | エビデンス（テキスト） |
-| 外部連携推進力（バウンダリースパナー） | collaborationAbility | エビデンス（テキスト） |
-| ディレクション・ブランドイメージの合致 | brandAlignment | エビデンス（テキスト） |
-| 長期的思考（持続可能性、自立性） | longTermVision | エビデンス（テキスト） |
-
-#### 操作ボタン:
-| ラベル名（表示） | 動作 | 条件 |
-|----------------|------|------|
-| 一時保存 | 入力内容の保存 | 任意の段階で実行可能 |
-| 確認画面に進む | 確認画面へ遷移 | 必須項目入力済み |
-| 申請する | 申請の実行 | 確認画面で実行 |
-| キャンセル | 入力取消 | 編集時 |
-| ソルバー一覧へ戻る | 一覧画面へ戻る | 任意 |
-
-### 3. 個人ソルバー一覧画面（URL: /solver/list/{solverCorporationId}）
-**ソースファイル**: `src/pages/solver/list/_solverCorporationId.vue`
-
-#### 絞り込み条件:
-| 項目名（表示） | フィールド名 | 選択肢 |
-|--------------|-------------|--------|
-| 個人ソルバー名 | name | 自由入力 |
-| 性別 | gender | 全て/男性/女性/未設定 |
-| 個人ソルバー登録 | certificationStatus | 全て/申請前/申請中/登録済み |
-| 稼働状況 | operatingStatus | 全て/未稼働/稼働中/休止中 |
-
-#### 一覧表示項目:
-| 項目名（表示） | 表示内容 | 操作 |
-|--------------|---------|------|
-| 個人ソルバー名 | 名前 | 詳細画面へリンク |
-| 性別 | 性別 | 表示のみ |
-| 個人ソルバー登録ステータス | 登録状況 | 表示のみ |
-| 稼働状況 | 稼働状況 | 表示のみ |
-| 稼働率(今月) | 今月の稼働率 | 表示のみ |
-| 稼働率(来月) | 来月の稼働率 | 表示のみ |
-| 最終更新日時 | 更新日時 | 表示のみ |
-
-### 4. 稼働率・単価更新画面（URL: /solver/utilization-rate）
-**ソースファイル**: `src/pages/solver/utilization-rate.vue`
-
-#### 更新対象項目:
-| 項目名（表示） | フィールド名 | 入力形式 |
-|--------------|-------------|---------|
-| 稼働率(今月) | providedOperatingRate | 数値（0-100%） |
-| 稼働率(来月) | providedOperatingRateNext | 数値（0-100%） |
-| 再来月以降の稼働見込み | operationProspectsMonthAfterNext | 選択肢 |
-| 人月単価(下限〜上限) | pricePerPersonMonth | 数値範囲 |
-| 時間単価(下限〜上限) | hourlyRate | 数値範囲 |
+| 実践的なノウハウ | criteria_1 | エビデンス（テキスト） |
+| タイムリーな実行力 | criteria_2 | エビデンス（テキスト） |
+| 顧客ファースト | criteria_3 | エビデンス（テキスト） |
+| 高い品質と顧客からの信頼 | criteria_4 | エビデンス（テキスト） |
+| 新たな事業機会や成長機会を創出する力 | criteria_5 | エビデンス（テキスト） |
+| 外部連携推進力（バウンダリースパナー） | criteria_6 | エビデンス（テキスト） |
+| ディレクション・ブランドイメージの合致 | criteria_7 | エビデンス（テキスト） |
+| 長期的思考（持続可能性、自立性） | criteria_8 | エビデンス（テキスト） |
 
 ---
 
-## 🔄 処理フロー詳細（アクター別）
+## 🔄 処理フロー詳細
 
 ### STEP 1: 法人ソルバー選択・初期設定
-**主体**: SOLVER_STAFF（法人ソルバー担当者）
-**対象**: システム
-**画面**: ソルバーメニュー画面
+**実行画面**: ソルバーメニュー画面
+**トリガー**: 法人ソルバー選択
 
-1. **SOLVER_STAFFがシステムに対して実行するアクション**
-   - アクション: 法人ソルバーを選択
+1. **画面操作**
    - 場所: 画面上部のセレクトボックス
+   - 操作: プルダウンから法人を選択
    - ラベル: 「法人ソルバーを選択する」
 
-2. **システムがSOLVER_STAFFに対して実行するアクション**
-   - 法人ソルバー情報が未登録の場合: 初期設定モーダルを表示
-   - 法人ソルバー情報が登録済みの場合: メニューアイテムを有効化
+2. **内部処理**
+   - API呼び出し: `GET /solver-corporations/{solver_corporation_id}`
+   - データチェック: 法人情報の登録状況確認
 
-3. **SOLVER_STAFFがシステムに対して実行するアクション（未登録時）**
-   - モーダル対応: 「法人ソルバー情報を入力してください」
-   - 必要な操作: 法人ソルバー情報の入力・保存
-   - 制限: 入力完了まで個人ソルバー登録機能は利用不可
+3. **結果**
+   - 成功時: メニュー項目を有効化
+   - 未登録時: 初期設定モーダル表示
 
 ### STEP 2: 新規個人ソルバー申請
-**主体**: SOLVER_STAFF（法人ソルバー担当者）
-**対象**: 個人ソルバー候補者の情報をシステムに登録
-**画面**: 新規個人ソルバー申請画面
+**実行画面**: 新規個人ソルバー申請画面
+**トリガー**: 「新規個人ソルバー申請」ボタンクリック
 
-1. **SOLVER_STAFFがシステムに対して実行するアクション**
-   - 基本情報入力: 個人ソルバー名、個人ソルバーかな、性別、生年月日、職歴
-   - スクリーニング項目入力: 8項目について「はい/いいえ」の評価 + エビデンス
-   - クライテリア項目入力: 8項目についてエビデンス（テキスト）
+1. **画面操作**
+   - 基本情報入力: 32項目の詳細情報
+   - スクリーニング評価: 8項目の評価とエビデンス
+   - クライテリア評価: 8項目のエビデンス
 
-2. **SOLVER_STAFFがシステムに対して選択するアクション**
-   - 一時保存: 入力途中での保存
-   - 確認画面遷移: 必須項目入力後の最終確認
-   - 申請実行: 確認画面での最終申請
+2. **内部処理**
+   - リアルタイムバリデーション: 入力値の形式チェック
+   - ファイルアップロード: S3への画像保存
+   - API呼び出し: `POST /solvers`
 
-3. **システムがSOLVER_STAFFに対して実行するアクション**
-   - バリデーション実行: 必須項目、形式チェック
-   - API処理: `POST /solvers`でデータ保存
-   - 結果通知: 「申請が完了しました」または エラーメッセージ表示
-
-4. **システムが内部で実行するアクション**
-   - ファイルアップロード: プロフィール画像、資料等の保存
-   - 申請審査: 入力内容の自動チェック
+3. **結果**
+   - 成功時: 申請完了メッセージ表示
+   - エラー時: 詳細なエラーメッセージ表示
 
 ### STEP 3: ソルバー候補管理
-**主体**: SOLVER_STAFF（法人ソルバー担当者）
-**対象**: ソルバー候補者をシステム上で管理
-**画面**: ソルバー候補一覧画面
+**実行画面**: ソルバー候補一覧画面
+**トリガー**: 「ソルバー候補一覧」メニュー選択
 
-1. **SOLVER_STAFFがシステムに対して実行するアクション**
-   - 候補者一覧表示要求: 登録済み候補者の確認
-   - 新規候補申請: 新しい候補者の情報入力
-   - 候補詳細表示要求: 特定候補者の詳細情報確認
+1. **画面操作**
+   - 候補者一覧の確認
+   - 候補者の詳細確認
+   - 個人ソルバーへの認定操作
 
-2. **SOLVER_STAFFがシステムに対して決定するアクション**
-   - 個人ソルバー登録判断: 候補者を個人ソルバーに昇格させるかの決定
-   - 確認モーダル対応: 「個人ソルバーへの登録」の最終確認
+2. **内部処理**
+   - API呼び出し: `GET /solvers?solver_type=solver_candidate`
+   - 認定処理: `PATCH /solvers/{solver_id}`
 
-3. **システムがSOLVER_STAFFに対して実行するアクション**
-   - 注意事項表示: 「登録後はソルバー候補一覧からは削除され、個人ソルバー一覧に表示されます」
-   - ステータス更新処理: 候補者 → 個人ソルバーへの変更実行
-   - API処理: `PATCH /solvers/{solver_id}`
+3. **結果**
+   - 成功時: 候補者→個人ソルバーへ移行
+   - エラー時: エラーメッセージ表示
 
 ### STEP 4: 稼働率・単価更新
-**主体**: SOLVER_STAFF（法人ソルバー担当者）
-**対象**: 所属個人ソルバーの稼働情報をシステム上で更新
-**画面**: 稼働率・単価更新画面
+**実行画面**: 稼働率・単価更新画面
+**トリガー**: 「個人ソルバー稼働率・単価更新」ボタンクリック
 
-1. **SOLVER_STAFFがシステムに対して実行するアクション**
-   - 更新対象確認: 所属個人ソルバー一覧の表示要求
-   - 稼働率入力: 今月・来月の稼働率データ入力
-   - 単価入力: 人月単価・時間単価データ入力
-   - 一括更新実行: 入力完了後の更新処理実行
+1. **画面操作**
+   - テーブル形式での一括編集
+   - 稼働率（今月・来月）の入力
+   - 単価（人月・時間）の入力
 
-2. **システムがSOLVER_STAFFに対して実行するアクション**
-   - データ表示: テーブル形式での個人ソルバー情報表示
-   - バリデーション: 入力値の妥当性チェック
-   - API処理: `PUT /solvers/utilization-rate/{solver_corporation_id}`
-   - 結果通知: 「更新が完了しました」またはエラーメッセージ表示
+2. **内部処理**
+   - バリデーション: 数値範囲、上限≥下限チェック
+   - API呼び出し: `PUT /solvers/utilization-rate/{solver_corporation_id}`
+   - 楽観ロック制御: Version属性による競合チェック
 
-3. **システムが内部で実行するアクション**
-   - 一括更新処理: 複数ソルバーの情報を同時更新
-   - データ整合性チェック: 更新内容の検証
+3. **結果**
+   - 成功時: 「更新が完了しました」メッセージ
+   - 競合時: 最新データ再取得を促すメッセージ
 
 ---
 
-## ⚠️ 注意事項・エラー処理（完全版）
+## ⚠️ 注意事項・エラー処理
 
-### HTTPステータスコード別エラー一覧
-| HTTPステータス | エラー種別 | 発生条件 | 表示メッセージ | 対処法 |
-|---------------|-----------|---------|--------------|--------|
-| 400 | バリデーションエラー | 必須項目未入力 | 「{項目名} is required.」 | 必須項目を入力 |
-| 400 | バリデーションエラー | 形式不正 | 「正しい形式で入力してください」 | 形式を修正 |
-| 400 | バリデーションエラー | 条件付き必須 | 「if {screening_X.evaluation} is True, {screening_X.evidence} is required.」 | エビデンスを入力 |
-| 400 | バリデーションエラー | 単価関係不正 | 「pricePerPersonMonth is greater than or equal to pricePerPersonMonthLower.」 | 単価の上限・下限を修正 |
-| 400 | ファイルエラー | ファイル形式不正 | 「jpg, png形式のファイルを選択してください」 | 対応形式のファイルを選択 |
-| 400 | ファイルエラー | ファイルサイズ超過 | 「ファイルサイズが大きすぎます（2MB以下）」 | ファイルサイズを縮小 |
-| 401 | 認証エラー | 未ログイン | 「ログインが必要です」 | ログイン画面へリダイレクト |
-| 403 | 権限エラー | 権限不足 | 「アクセス権限がありません」 | 適切なロール（APT, SOLVER_STAFF）でログイン |
-| 403 | 権限エラー | 他法人データアクセス | 「他法人のデータにはアクセスできません」 | 所属法人のデータのみ操作 |
-| 404 | データ不存在 | 対象データなし | 「{データ名}はデータが存在しないため、更新できませんでした」 | 対象データの存在確認 |
-| 409 | 更新競合 | 楽観ロック制御 | 「更新が競合した為、処理に失敗しました。再度、変更を入力してください」 | 最新データで再入力 |
-| 500 | サーバーエラー | 内部処理エラー | 「システムエラーが発生しました」 | システム管理者に連絡 |
-
-### 申請モード別バリデーション規則
-
-#### 1. ソルバー候補申請（mode="create_candidate"）
-| 項目 | 必須/任意 | バリデーション規則 | エラーメッセージ |
-|-----|----------|------------------|--------------|
-| name | 必須 | 文字数制限 | 「name is required.」 |
-| name_kana | 必須 | ひらがな形式 | 「name_kana is required.」 |
-| solver_application_id | 必須 | 文字列 | 「solver_application_id is required.」 |
-| solver_application_name | 必須 | 文字列 | 「solver_application_name is required.」 |
-| corporate_id | 必須 | UUID形式 | 「corporate_id is required.」 |
-| sex | 必須 | 選択肢（man/woman/not_set） | 「sex is required.」 |
-| birth_day | 必須 | yyyy/MM/dd形式 | 「birth_day is required.」 |
-| work_history | 必須 | テキスト | 「work_history is required.」 |
-| specialized_themes | 必須 | テキスト | 「specialized_themes is required.」 |
-| main_achievements | 必須 | テキスト | 「main_achievements is required.」 |
-
-#### 2. 個人ソルバー申請（mode="create_solver", registration_status="saved"）
-| セクション | 項目 | 必須/任意 | バリデーション規則 |
-|-----------|-----|----------|------------------|
-| 基本情報 | name | 必須 | 文字数制限 |
-| 基本情報 | name_kana | 必須 | ひらがな形式 |
-| 基本情報 | corporate_id | 必須 | UUID形式 |
-| 基本情報 | sex | 必須 | 選択肢 |
-| 基本情報 | birth_day | 必須 | 日付形式 |
-| 基本情報 | title | 必須 | 文字列 |
-| 基本情報 | email | 任意 | メール形式 |
-| 基本情報 | phone | 任意 | 電話番号形式 |
-| 基本情報 | face_photo | 必須 | 画像ファイル（jpg/png, 2MB以下） |
-| スキル | issue_map50 | 必須 | 配列（複数選択可） |
-| スキル | operating_status | 必須 | 選択肢 |
-| スキル | academic_background | 必須 | テキスト |
-| スキル | work_history | 必須 | テキスト |
-| スキル | specialized_themes | 必須 | テキスト |
-| スキル | main_achievements | 必須 | テキスト |
-| スキル | english_level | 必須 | 選択肢 |
-| スキル | tsi_areas | 必須 | 配列（複数選択可） |
-| 稼働・単価 | provided_operating_rate | 必須 | 数値（0-100） |
-| 稼働・単価 | provided_operating_rate_next | 必須 | 数値（0-100） |
-| 稼働・単価 | operation_prospects_month_after_next | 必須 | 選択肢 |
-| 稼働・単価 | price_per_person_month | 必須 | 数値（正数） |
-| 稼働・単価 | price_per_person_month_lower | 必須 | 数値（正数、上限以下） |
-| 稼働・単価 | hourly_rate | 必須 | 数値（正数） |
-| 稼働・単価 | hourly_rate_lower | 必須 | 数値（正数、上限以下） |
-| クライテリア | criteria_1 ～ criteria_8 | 必須 | テキスト（各項目） |
-
-#### 3. スクリーニング項目の条件付きバリデーション
-```
-if screening_X.evaluation == true:
-    screening_X.evidence is required
-else:
-    screening_X.evidence is optional
-```
-
-#### 4. 一時保存（registration_status="temporary_saving"）
-| 項目 | 必須/任意 | 備考 |
-|-----|----------|------|
-| name | 必須 | 最小限の必須項目 |
-| corporate_id | 必須 | 法人識別用 |
-| sex | 必須 | 基本情報 |
-| 他の項目 | 任意 | 段階的な入力を許可 |
-
-### ファイルアップロード制限
-| ファイル種別 | 対応形式 | 最大サイズ | S3保存パス | 備考 |
-|------------|---------|----------|-----------|------|
-| プロフィール画像 | jpg, png | 2MB | photos/{corporateId}/{fileKeyId}/ | 個人ソルバー申請時は必須 |
-| 添付資料 | pdf, doc, docx | 5MB | resumes/{corporateId}/{fileKeyId}/ | 任意 |
-
-### 権限制御エラー
-| ロール | アクセス可能データ | 制限事項 | エラー発生条件 |
-|--------|----------------|---------|--------------|
-| APT | 全法人のソルバーデータ | なし | - |
-| SOLVER_STAFF | 所属法人のソルバーデータのみ | corporate_idが一致するデータのみ | 他法人データアクセス時 |
-
-### 楽観ロック制御
-- **DynamoDBのVersionAttribute**を使用
-- 更新時にversionが一致しない場合は409エラー
-- フロントエンドで最新データを再取得して再入力を促す
-
-### Salesforce連携エラー
-| エラー種別 | 発生条件 | 対処法 |
-|-----------|---------|--------|
-| メール送信失敗 | SES送信エラー | バックグラウンドで再試行 |
-| データ形式不正 | Salesforce側での検証エラー | ログで詳細確認 |
+### よくあるエラーパターン
+| エラー種別 | 発生条件 | 表示メッセージ | 対処法 |
+|-----------|---------|--------------|--------|
+| バリデーションエラー | 必須項目未入力 | 「{項目名} is required.」 | 必須項目を入力 |
+| 権限エラー | 他法人データアクセス | 「アクセス権限がありません」 | 所属法人のデータのみ操作 |
+| 更新競合 | 同時更新 | 「更新が競合した為、処理に失敗しました」 | 最新データで再入力 |
+| ファイルエラー | サイズ超過 | 「ファイルサイズが大きすぎます（2MB以下）」 | ファイルサイズを縮小 |
 
 ---
 
@@ -609,109 +356,37 @@ else:
 | ロール | 利用可能機能 | 制限事項 |
 |--------|------------|---------|
 | APT | 全機能利用可能 | なし |
-| SOLVER_STAFF | 法人ソルバー機能のみ | 所属法人のデータのみ操作可能 |
+| SOLVER_STAFF | 所属法人のソルバー管理のみ | corporate_idが一致するデータのみ操作可能 |
 
 ---
 
-## 📝 補足情報（完全版）
+## 📝 補足情報
 
 ### 新人向けの説明
-1. **人材要件機能（ソルバーソーシング機能）とは**
+1. **ソルバーソーシング機能とは**
    - 法人ソルバーが個人ソルバーの登録・管理を行うシステム
    - 人材の能力評価（スクリーニング・クライテリア）を含む総合的な人材管理
    - 稼働状況・単価の動的管理機能
 
-2. **申請プロセスの詳細フロー**
-   - **STEP 1**: 法人ソルバー情報の初期設定（初回のみ）
-   - **STEP 2**: ソルバー候補の申請（基本情報のみ）
-   - **STEP 3**: 個人ソルバー申請（32項目の詳細情報）
-   - **STEP 4**: スクリーニング8項目の評価（はい/いいえ + エビデンス）
-   - **STEP 5**: クライテリア8項目の評価（エビデンス記入）
-   - **STEP 6**: システム審査・承認・登録完了
+2. **申請プロセスの段階性**
+   - **ソルバー候補**: 基本情報のみで簡易登録
+   - **個人ソルバー**: 32項目の詳細情報で正式登録
+   - **一時保存**: 申請途中での保存が可能
 
-3. **データ登録の段階性**
-   - **一時保存**: 最小限の必須項目（名前、性別、法人ID）で保存可能
-   - **候補者保存**: 基本情報+α で候補者として登録
-   - **個人ソルバー保存**: 全32項目入力で正式な個人ソルバーとして登録
-
-4. **重要なポイント**
-   - バリデーションは申請モードにより動的に変更
-   - スクリーニング項目は条件付き必須（評価が「はい」の場合のみエビデンス必須）
-   - ファイルアップロードはS3に保存され、ファイルキーIDで管理
+3. **重要なポイント**
+   - スクリーニング項目は「はい」の場合エビデンス必須
    - 楽観ロック制御により同時更新を防止
-
-### 技術的な仕組み
-1. **データベース設計（DynamoDB）**
-   - 単一テーブル設計（SolverModel）
-   - グローバルセカンダリインデックス（GSI）で高速検索
-   - VersionAttributeによる楽観ロック制御
-
-2. **API設計（FastAPI）**
-   - RESTful API（GET, POST, PUT, PATCH, DELETE）
-   - Pydanticによるリクエスト/レスポンス型定義
-   - JWT認証による権限制御
-
-3. **フロントエンド設計（Vue.js + Nuxt.js）**
-   - TypeScriptによる型安全性
-   - コンポーネント設計による再利用性
-   - 多言語対応（ja.json）
-
-4. **ファイル管理（S3）**
-   - 階層的なディレクトリ構造
-   - UUID形式のファイルキーID
-   - プロフィール画像と添付資料の分離
+   - 候補者→個人ソルバーの昇格は不可逆
 
 ### 業務上の注意点
-1. **データの整合性管理**
-   - 法人ソルバー情報は全ての個人ソルバー操作の前提条件
-   - 稼働率・単価は月次での定期更新が必要
-   - 削除されたユーザーのデータは一括更新時に除外
+1. **法人ソルバー情報は必須**
+   - すべての操作の前提条件
+   - 初回は必ず設定が必要
 
-2. **権限管理の重要性**
-   - APT: 全法人のデータにフルアクセス可能
-   - SOLVER_STAFF: 所属法人（corporate_id一致）のデータのみアクセス可能
-   - 権限違反は403エラーで即座にブロック
+2. **権限管理の徹底**
+   - APT: 全法人のデータアクセス可能
+   - SOLVER_STAFF: 所属法人のみ
 
-3. **申請フローの不可逆性**
-   - 候補者→個人ソルバーの昇格は一方向（取り消し不可）
-   - ただし、個人ソルバーの情報は編集・削除が可能
-   - 削除は物理削除（データベースから完全削除）
-
-4. **システム連携**
-   - Salesforce: 新規ソルバー登録時にデータ同期メール送信
-   - Master管理システム: 課題マップ50、東証33業種の選択肢取得
-   - S3: ファイルストレージとして画像・資料を管理
-
-### トラブルシューティング
-1. **よくある問題と解決法**
-   - 「法人ソルバー情報を入力してください」→ 初期設定モーダルから法人情報を登録
-   - 「個人ソルバー登録申請には、全必須項目の入力が必要です」→ 32項目すべての必須項目を確認
-   - 「更新が競合した為、処理に失敗しました」→ 最新データを再取得して再入力
-   - 「ファイルサイズが大きすぎます」→ 画像は2MB以下、資料は5MB以下に縮小
-
-2. **パフォーマンス上の注意**
-   - 大量データの一括更新時は処理時間を考慮
-   - ファイルアップロード時はプログレス表示でユーザビリティ向上
-   - GSIを活用した効率的なデータ検索
-
-3. **セキュリティ上の注意**
-   - 個人情報（PII）の適切な取り扱い
-   - S3ファイルアクセスの権限制御
-   - JWT Tokenの有効期限管理
-
-### システム運用
-1. **監視ポイント**
-   - API のレスポンス時間
-   - DynamoDB の読み取り・書き込み容量
-   - S3 のストレージ使用量
-   - Salesforce 連携の成功率
-
-2. **定期メンテナンス**
-   - 不要なファイルの削除（S3）
-   - インデックスの最適化（DynamoDB）
-   - ログファイルのローテーション
-
-3. **災害復旧**
-   - DynamoDB のポイントインタイムリカバリ
-   - S3 のクロスリージョンレプリケーション
-   - 定期的なバックアップ検証
+3. **月次更新の重要性**
+   - 稼働率・単価は定期的な更新が必要
+   - 一括更新機能を活用
