遷移図更新

--- a/pg/iret/FO/人材要件機能画面遷移図.md
+++ b/pg/iret/FO/人材要件機能画面遷移図.md
@@ -50,11 +50,11 @@ flowchart TD
     
     MenuDisplay --> HR[人材要件機能選択<br/>GUI: メニュークリック]
     
-    HR --> |個人ソルバー一覧| SolverList[個人ソルバー一覧画面<br/>URL: /solver/list/{corporationId}]
+    HR --> |個人ソルバー一覧| SolverList[個人ソルバー一覧画面<br/>URL: /solver/list/corporationId]
     HR --> |新規個人ソルバー申請| SolverApp[新規個人ソルバー申請画面<br/>URL: /solver/application]
     HR --> |新規ソルバー候補申請| CandidateApp[新規ソルバー候補申請画面<br/>URL: /solver/candidate/application]
-    HR --> |ソルバー候補一覧| CandidateList[ソルバー候補一覧画面<br/>URL: /solver/candidate/list/{corporationId}]
-    HR --> |稼働率・単価更新| RateUpdate[稼働率・単価更新画面<br/>URL: /solver/utilization-rate/{corporationId}]
+    HR --> |ソルバー候補一覧| CandidateList[ソルバー候補一覧画面<br/>URL: /solver/candidate/list/corporationId]
+    HR --> |稼働率・単価更新| RateUpdate[稼働率・単価更新画面<br/>URL: /solver/utilization-rate/corporationId]
     
     SolverList --> End([終了])
     SolverApp --> End
@@ -108,9 +108,9 @@ flowchart TD
 | 法人ソルバーを選択する | プルダウン選択 | 各機能へ |
 | 新規個人ソルバー申請 | 新規申請画面へ | /solver/application |
 | 新規ソルバー候補申請 | 候補申請画面へ | /solver/candidate/application |
-| 個人ソルバー一覧 | 一覧表示 | /solver/list/{corporationId} |
-| ソルバー候補一覧 | 候補一覧表示 | /solver/candidate/list/{corporationId} |
-| 個人ソルバー稼働率・単価更新 | 稼働率更新画面へ | /solver/utilization-rate/{corporationId} |
+| 個人ソルバー一覧 | 一覧表示 | /solver/list/[corporationId] |
+| ソルバー候補一覧 | 候補一覧表示 | /solver/candidate/list/[corporationId] |
+| 個人ソルバー稼働率・単価更新 | 稼働率更新画面へ | /solver/utilization-rate/[corporationId] |
 
 ---
 
