Doc矛盾点解消

--- a/pg/soujitsu/Docs/01_光熱費管理システム_統合説明書.md
+++ b/pg/soujitsu/Docs/01_光熱費管理システム_統合説明書.md
@@ -115,7 +115,7 @@ flowchart LR
 #### 現行システムの問題点
 | 問題 | 詳細 | 影響 |
 |------|------|------|
-| コード冗長性 | 1,813行中97%が冗長 | 保守困難 |
+| コード冗長性 | 2,158行中97%が冗長 | 保守困難 |
 | 属人化 | VBA理解者が限定的 | 業務継続リスク |
 | 手動作業 | データ転記が多い | ミス発生率高 |
 | 同時編集不可 | Excel排他制御 | 作業効率低下 |
@@ -128,7 +128,7 @@ flowchart LR
 - **処理時間**: 95%短縮（数分→数秒）
 - **保守コスト**: 80%削減
 
-### 移行計画（6ヶ月）
+### 移行計画（6.5ヶ月）
 
 ```mermaid
 gantt
@@ -158,6 +158,10 @@ gantt
 | 2グループ | 33 | 負荷按分 | 共用部 |
 | 78グループ | 71 | 負荷按分 | 中規模テナント |
 | 9グループ | 89 | 負荷按分 | 大規模テナント |
+| **合計** | **450** | - | **実テナント数** |
+
+※検針データは約700件/月（複数メーターを持つテナントを含む）
+※Pleasanterではアクティブテナント約100件を想定
 
 ### レガシー要素の対応
 - **フロッピーディスク参照**: A:\への参照を削除
@@ -172,9 +176,12 @@ gantt
 | 項目 | 現行システム | 新システム |
 |------|------------|-----------|
 | 年間人件費 | 360万円 | 0円（自動化） |
-| 初期投資 | - | 936万円 |
+| 初期投資 | - | 936万円（133人日×平均7万円） |
 | 投資回収期間 | - | 2.6年 |
 | 5年間累積効果 | - | +864万円 |
+
+※開発工数：SE 80人日×8万円 + PG 53人日×6万円 = 936万円
+※詳細見積もりでは145人日だが、効率化により133人日で実施
 
 ---
 
