--- a/pg/soujitsu/Docs/archive/16_開発工数見積もり_双日ライフワン.md
+++ b/pg/soujitsu/Docs/archive/16_開発工数見積もり_双日ライフワン.md
@@ -19,7 +19,7 @@
 - **VBAマクロ**: 25機能・1,800行以上のコード
 
 ### 移行後システム要件
-- **Pleasanterデータベース**: 6テーブル構成によるデータ管理
+- **Pleasanterデータベース**: 15テーブル構成によるデータ管理（マスター6、トランザクション6、集計3）
 - **JavaScript機能**: VBAマクロ機能のWeb化
 - **ファイルアップロード**: CSV/Excel一括取込み機能
 - **帳票出力**: Pleasanter標準機能+カスタム出力
@@ -153,9 +153,9 @@
 
 ## 📅 開発スケジュール
 
-### 開発期間: 6ヶ月
+### 開発期間: 6.5ヶ月
 ```
-2025年8月 - 2026年1月
+2025年8月 - 2026年2月中旬
 ```
 
 ### フェーズ別スケジュール
