ルール作成

--- a/pg/iret/FO/バックログ課題管理フォーマットルール.md
+++ b/pg/iret/FO/バックログ課題管理フォーマットルール.md
@@ -45,12 +45,55 @@
 ### 3.4 利用可能権限
 - 機能を利用できるロールと条件を記載
 - すべてのロールについて記載すること
-
 ### 3.5 項目定義
-- 画面に表示されるすべての項目を記載
-- I/O欄：I（入力）、O（出力）、I/O（入出力）のいずれかを記載
-- 必須欄：必須の場合は「○」、任意の場合は空欄
-- データ型：string, number, boolean, date等を記載
+
+- 画面に表示されるすべての項目を記載すること
+- 各列の意味：
+  - I/O欄：I（入力）、O（出力）、I/O（入出力）のいずれか
+  - 必須欄：必須の場合は「○」、任意は空白
+  - 初期値：初期値がない場合は空白
+  - データ型：以下の分類で統一
+    - 文字列 = `String`
+    - 数値 = `Integer`
+    - 真偽値 = `Boolean`
+    - 日付 = `Datetime`
+  - 項目種別：以下に準拠して記載
+
+#### ✅ 項目種別の定義
+
+##### 入力項目（input）
+
+| 種別 | 説明 |
+|------|------|
+| テキストボックス | 1行、改行不可 |
+| テキストエリア | 複数行、改行可能 |
+| ラジオボタン | 単一選択可 |
+| チェックボックス | 複数選択可 |
+| セレクトボックス | プルダウン、単一選択 |
+| リストボックス | 複数選択可 |
+| ファイル選択 | ファイルアップロード |
+| カレンダー | 日付選択 |
+| 時間選択 | タイムピッカー |
+| ボタン | 押下操作用 |
+
+##### 表示項目（output）
+
+| 種別 | 説明 |
+|------|------|
+| テキスト | 文字・数値・選択値など |
+| サムネイル | 画像表示 |
+| リンク | 遷移可能なテキスト等 |
+| ボタン | 表示用途（処理なしの場合も含む）|
+
+- **備考欄に補足が必要な場合は、簡潔に記載すること**
+
+#### ✅ 入力制約について
+
+- 以下のような制約を記載する
+  - ラジオボタンやセレクトボックスの項目一覧（例：性別：男性／女性）
+  - 最大文字数、入力禁止文字、上限値など
+  - セレクトボックス・リストボックスの選択肢は**コードマスタを参照することを原則**とする
+
 
 ### 3.6 バリデーション
 - チェック場所：F（フロントエンド）、B（バックエンド）、F/B（両方）のいずれかを記載
@@ -118,9 +161,9 @@
 
 ## 項目定義
 
-| 画面項目名 | サイト表記 | 項目種別 | I/O | データ型 | 必須 | 上限 | 初期値 | プレースホルダー | 入力制約 | 備考 |
-|-------|-------|------|-----|------|----|----|-----|----------|------|----|
-|  |  |  |  |  |  |  |  |  |  |  |
+| 画面項目名 | 項目種別 | I/O | データ型 | 必須 | 初期値 | プレースホルダー | 入力制約 | 備考 |
+|-------|------|-----|------|----|----|----------|------|----|
+|  |  |  |  |  |  |  |  |  |  |
 
 ## バリデーション
 
@@ -133,9 +176,9 @@
 
 ## リンク・ボタン項目
 
-| ボタン・リンク名 | サイト表記 | 項目種別 | 遷移先 | 初期状態（活性・非活性） | 備考 |
-|----------|-------|------|-----|--------------|----|
-|  |  |  |  |  |  |
+| ボタン・リンク名 | 項目種別 | 遷移先 | 初期状態（活性・非活性） | 備考 |
+|----------|------|-----|--------------|----|
+|  |  |  |  |  |
 
 ## イベント定義
 
