基本設計md の修正

--- a/pg/iret/FO/バックログ課題管理フォーマットルール.md
+++ b/pg/iret/FO/バックログ課題管理フォーマットルール.md
@@ -53,10 +53,10 @@
   - 必須欄：必須の場合は「○」、任意は空白
   - 初期値：初期値がない場合は空白
   - データ型：以下の分類で統一
-    - 文字列 = `String`
-    - 数値 = `Integer`
-    - 真偽値 = `Boolean`
-    - 日付 = `Datetime`
+    - 文字列（String型）
+    - 数値（Integer型）
+    - 真偽値（Boolean型）
+    - 日付（Datetime型）
   - 項目種別：以下に準拠して記載
 
 #### ✅ 項目種別の定義
@@ -224,10 +224,10 @@
 
 ## 項目定義
 
-| 画面項目名 | サイト表記 | 項目種別 | I/O | データ型 | 必須 | 上限 | 初期値 | プレースホルダー | 入力制約 | 備考 |
-|------------|------------|----------|-----|----------|------|------|--------|------------------|----------|------|
-| ユーザー名 | ユーザー名 | テキスト | I | string | ○ | 30 | | 例）田中太郎 | 半角英数字 | |
-| パスワード | パスワード | パスワード | I | string | ○ | 64 | | ******** | 英数字8文字以上 | DBはハッシュ化 |
+| 画面項目名 | 項目種別 | I/O | データ型 | 必須 | 初期値 | プレースホルダー | 入力制約 | 備考 |
+|------------|----------|-----|----------|------|--------|------------------|----------|------|
+| ユーザー名 | テキストボックス | I | 文字列 | ○ |  | 例）田中太郎 | 半角英数字、最大30文字 | |
+| パスワード | テキストボックス | I | 文字列 | ○ |  | ******** | 英数字8文字以上、最大64文字 | DBはハッシュ化 |
 
 ## バリデーション
 
@@ -241,10 +241,10 @@
 
 ## リンク・ボタン項目
 
-| ボタン・リンク名 | サイト表記 | 項目種別 | 遷移先 | 初期状態（活性・非活性） | 備考 |
-|------------------|------------|----------|--------|-------------------------|------|
-| 登録ボタン | 登録 | ボタン | 完了画面へ | 活性 | バリデ後有効化 |
-| 戻るリンク | ログインへ戻る | リンク | /login | 活性 | |
+| ボタン・リンク名 | 項目種別 | 遷移先 | 初期状態（活性・非活性） | 備考 |
+|------------------|----------|--------|-------------------------|------|
+| 登録ボタン | ボタン | /register/complete | 活性 | バリデーション後有効化 |
+| 戻るリンク | リンク | /login | 活性 | |
 
 ## イベント定義
 
