--- a/pg/iret/FO/人材要件一覧画面_設計書.md
+++ b/pg/iret/FO/人材要件一覧画面_設計書.md
@@ -2,15 +2,16 @@
 
 ## 関連課題
 
-* （新規作成のため関連課題なし）
+* なし
 
 ## 機能概要
 
-SFで登録した案件に紐づく人材要件の一覧を表示する画面。選択して詳細画面へ遷移することができる。
+Salesforceで登録した案件に紐づく人材要件の一覧を表示する画面。
+ユーザーは一覧から人材要件を選択して詳細画面へ遷移でき、検索機能を使用して特定の要件を絞り込むことができる。
 
 ## 画面デザイン
 
-※詳細な画面デザインは別途デザインファイルを参照
+※後日添付
 
 ## 利用可能権限
 
@@ -22,30 +23,33 @@ SFで登録した案件に紐づく人材要件の一覧を表示する画面。
 
 ## 項目定義
 
-| 画面項目名 | サイト表記 | 項目種別 | I/O | データ型 | 必須 | 上限 | 初期値 | プレースホルダー | 入力制約 | 備考 |
-|------------|------------|----------|-----|----------|------|------|--------|------------------|----------|------|
-| 絞り込み用タイトル | 絞り込み用タイトル | インプット | I | string | - | - | - | - | - | - |
-| 絞り込み用ステータス | 絞り込み用ステータス | セレクト | I/O | string | - | - | - | - | - | - | 
-| 人材要件No | 人材要件No | テキスト | O | string | - | - | - | - | - | - | 
-| 人材要件ID | 人材要件ID | テキスト | O | string | - | - | - | - | - | - | 
-| タイトル | タイトル | テキスト | O | string | - | - | - | - | - | - |
-| ソーシング期日 | ソーシング期日 | 日付 | O | date | - | - | - | - | - | YYYY/MM/DD形式 |
-| ステータス | ステータス | テキスト | O | string | - | - | - | - | - | - |
+| 画面項目名 | 項目種別 | I/O | データ型 | 必須 | 初期値 | プレースホルダー | 入力制約 | 備考 |
+|------------|----------|-----|----------|------|--------|------------------|----------|------|
+| 絞り込み用タイトル | テキストボックス | I | 文字列 |  |  | タイトルを入力 | 最大100文字 | |
+| 絞り込み用ステータス | セレクトボックス | I | 文字列 |  | 全て | 選択してください | 募集中/選定中/完了 | コードマスタ参照 |
+| 人材要件No | テキスト | O | 文字列 |  |  |  | | |
+| 人材要件ID | テキスト | O | 文字列 |  |  |  | | 内部管理用 |
+| タイトル | テキスト | O | 文字列 |  |  |  | | |
+| ソーシング期日 | テキスト | O | 日付 |  |  |  | | YYYY/MM/DD形式で表示 |
+| ステータス | テキスト | O | 文字列 |  |  |  | | |
 
 ## バリデーション
 
 | 画面項目名 | チェック場所 | チェック内容 | エラーメッセージ | 備考 |
 |------------|--------------|--------------------------|--------------------------|---------|
-| - | - | - | - | 一覧表示のため入力項目なし |
+| - | - | - | - | 一覧表示画面のため入力項目に対するバリデーションなし |
+
+* F：フロントエンド
+* B：バックエンド
 
 ## リンク・ボタン項目
 
-| ボタン・リンク名 | サイト表記 | 項目種別 | 遷移先 | 初期状態（活性・非活性） | 備考 |
-|------------------|------------|----------|--------|-------------------------|------|
-| 人材要件No | 人材要件No | リンク | 人材要件詳細画面 | 活性 | 各行に表示 |
-| 絞り込み | 絞り込み | ボタン | - | 活性 | 絞り込み検索表示 |
-| リセット | リセット | ボタン | - | 活性 | 検索条件クリア一覧再表示 |
-| ページネーション | 1 2 3... | リンク | - | 活性 | 10件/ページ |
+| ボタン・リンク名 | 項目種別 | 遷移先 | 初期状態（活性・非活性） | 備考 |
+|------------------|----------|--------|-------------------------|------|
+| 人材要件No | リンク | 人材要件詳細画面 | 活性 | 各行に表示 |
+| 絞り込み | ボタン | - | 活性 | 検索実行 |
+| リセット | ボタン | - | 活性 | 検索条件をクリア |
+| ページネーション | リンク | - | 活性 | 10件/ページ |
 
 ## イベント定義
 
@@ -53,7 +57,8 @@ SFで登録した案件に紐づく人材要件の一覧を表示する画面。
 |----------|----------|--------------|------|
 | 画面初期表示 | 人材要件一覧をAPIから取得し表示 | エラーメッセージを画面上部に表示 | ローディング表示あり |
 | 人材要件Noクリック | 選択した要件の詳細画面へ遷移 | - | 人材要件IDをパラメータで渡す |
-| 検索ボタンクリック | 入力条件で一覧を絞り込み | 該当データなしメッセージ表示 | |
+| 絞り込みボタンクリック | 入力条件で一覧を絞り込み | 該当データなしメッセージ表示 | |
+| リセットボタンクリック | 検索条件をクリアして全件表示 | エラーメッセージを画面上部に表示 | |
 | ページ切り替え | 指定ページのデータを取得・表示 | エラーメッセージを画面上部に表示 | |
 
 ## 利用DB
@@ -75,4 +80,5 @@ SFで登録した案件に紐づく人材要件の一覧を表示する画面。
    - APIコール（検索条件付き）
    - 結果を画面に表示
 5. 詳細画面への遷移
-   - 人材要件IDを持って詳細画面へ遷移
+   - 人材要件Noをクリック
+   - 人材要件IDをパラメータに詳細画面へ遷移
