--- a/pg/iret/FO/人材要件詳細画面_設計書.md
+++ b/pg/iret/FO/人材要件詳細画面_設計書.md
@@ -2,15 +2,16 @@
 
 ## 関連課題
 
-* （新規作成のため関連課題なし）
+* なし
 
 ## 機能概要
 
-選択した人材要件の詳細情報を表示する画面。専門テーマ、依頼業務、求められるスキル、稼働条件などの詳細情報を確認し、応募ソルバー画面への遷移が可能。
+選択した人材要件の詳細情報を表示する画面。
+専門テーマ、依頼業務、求められるスキル、稼働条件などの詳細情報を確認でき、応募ソルバー画面への遷移が可能。
 
 ## 画面デザイン
 
-※詳細な画面デザインは別途デザインファイルを参照
+※後日添付
 
 ## 利用可能権限
 
@@ -22,35 +23,38 @@
 
 ## 項目定義
 
-| 画面項目名 | サイト表記 | 項目種別 | I/O | データ型 | 必須 | 上限 | 初期値 | プレースホルダー | 入力制約 | 備考 |
-|------------|------------|----------|-----|----------|------|------|--------|------------------|----------|------|
-| 人材要件No | 人材要件No | テキスト | O | string | | | | | | |
-| 人材要件ID | 人材要件ID | テキスト | O | string | | | | | | |
-| 案件コード | 案件コード | テキスト | O | string | | | | | | |
-| 案件URL | 案件URL | リンク | O | string | | | | | | 外部サイトへのリンク |
-| タイトル | タイトル | テキスト | O | string | | | | | | |
-| ソーシング期限 | ソーシング期限 | 日付 | O | date | | | | | | YYYY/MM/DD |
-| 専門テーマ／職種 | 専門テーマ／職種 | テキスト | O | | | | | | | |
-| 依頼業務 | 依頼業務 | テキストエリア | O | string | | | | | | |
-| 求められるスキル／保持したい実績 | 求められるスキル／保持したい実績 | テキストエリア | O | string | | | | | | |
-| 所属企業イメージ | 所属企業イメージ | テキスト | O | string | | | | | | |
-| 実施見込み | 実施見込み | テキスト | O | string | | | | | | YYYY年MM月開始 |
-| 指定される稼働時間・工数 | 指定される稼働時間・工数 | テキスト | O | string | | | | | | |
-| 備考 | 備考 | テキストエリア | O | string | | | | | | |
+| 画面項目名 | 項目種別 | I/O | データ型 | 必須 | 初期値 | プレースホルダー | 入力制約 | 備考 |
+|------------|----------|-----|----------|------|--------|------------------|----------|------|
+| 人材要件No | テキスト | O | 文字列 |  |  |  | | |
+| 人材要件ID | テキスト | O | 文字列 |  |  |  | | 内部管理用 |
+| 案件コード | テキスト | O | 文字列 |  |  |  | | |
+| 案件URL | リンク | O | 文字列 |  |  |  | | 外部サイトへのリンク |
+| タイトル | テキスト | O | 文字列 |  |  |  | | |
+| ソーシング期限 | テキスト | O | 日付 |  |  |  | | YYYY/MM/DD形式で表示 |
+| 専門テーマ／職種 | テキスト | O | 文字列 |  |  |  | | |
+| 依頼業務 | テキスト | O | 文字列 |  |  |  | | 改行を含む場合あり |
+| 求められるスキル／保持したい実績 | テキスト | O | 文字列 |  |  |  | | 改行を含む場合あり |
+| 所属企業イメージ | テキスト | O | 文字列 |  |  |  | | |
+| 実施見込み | テキスト | O | 文字列 |  |  |  | | YYYY年MM月開始形式 |
+| 指定される稼働時間・工数 | テキスト | O | 文字列 |  |  |  | | |
+| 備考 | テキスト | O | 文字列 |  |  |  | | 改行を含む場合あり |
 
 ## バリデーション
 
 | 画面項目名 | チェック場所 | チェック内容 | エラーメッセージ | 備考 |
 |------------|--------------|--------------------------|--------------------------|---------|
-| - | - | - | - | 詳細表示のため入力項目なし |
+| - | - | - | - | 詳細表示画面のため入力項目なし |
+
+* F：フロントエンド
+* B：バックエンド
 
 ## リンク・ボタン項目
 
-| ボタン・リンク名 | サイト表記 | 項目種別 | 遷移先 | 初期状態（活性・非活性） | 備考 |
-|------------------|------------|----------|--------|-------------------------|------|
-| 一覧へ戻る | 一覧へ戻る | リンク | 人材要件一覧画面 | 活性 | |
-| 変更する | 変更する | ボタン | 応募ソルバー画面 | 活性 | ステータスが完了の場合は非活性 |
-| 案件URL | - | リンク | 案件詳細画面 | 活性 | 外部サイトへのリンク |
+| ボタン・リンク名 | 項目種別 | 遷移先 | 初期状態（活性・非活性） | 備考 |
+|------------------|----------|--------|-------------------------|------|
+| 一覧へ戻る | リンク | /project-requirements | 活性 | |
+| 変更する | ボタン | /project-requirements/{requirementId}/applied-solvers | 活性 | ステータスが「完了」の場合は非活性 |
+| 案件URL | リンク | {外部URL} | 活性 | 別タブで開く |
 
 ## イベント定義
 
@@ -59,23 +63,30 @@
 | 画面初期表示 | 人材要件IDを元に詳細情報をAPIから取得し表示 | エラーメッセージを画面上部に表示 | ローディング表示あり |
 | 変更するボタンクリック | 応募ソルバー画面へ遷移 | - | 人材要件IDをパラメータで渡す |
 | 一覧へ戻るクリック | 人材要件一覧画面へ遷移 | - | |
-| 案件URLクリック | パートナーポータルを別タブで開く | - | 外部サイトへの遷移 |
+| 案件URLクリック | 外部サイトを別タブで開く | - | target="_blank" |
 
 ## 利用DB
 
+| 場所（NPF/ PP） | テーブル名 | CRUD | 備考 |
+|-----------------|------------|------|------|
+| NPF | 人材要件マスタ | R | Salesforceから同期 |
+| PP | project_requirements | R | 人材要件詳細情報の参照 |
+| NPF | 案件マスタ | R | 案件情報の参照 |
 
 ## 利用API
 
+- `GET /api/project-requirements/{requirementId}`: 人材要件詳細情報の取得
 
 ## シーケンス・フロー
 
-1. 一覧画面から詳細リンクをクリック
-2. 人材要件詳細画面へ遷移（人材要件IDを受け取る）
+1. 一覧画面から人材要件Noをクリック
+2. 人材要件詳細画面へ遷移（URLパラメータで人材要件IDを受け取る）
 3. 初期表示処理
    - ローディング表示
-   - APIコール
+   - APIコール（GET /api/project-requirements/{requirementId}）
    - 詳細データ取得
    - 画面に詳細情報を表示
+   - ステータスが「完了」の場合、「変更する」ボタンを非活性化
 4. 応募ソルバー画面への遷移
    - 「変更する」ボタンクリック
-   - 人材要件IDを持って応募ソルバー画面へ遷移
+   - 人材要件IDをパラメータに応募ソルバー画面へ遷移
