--- a/pg/iret/FO/応募ソルバー画面_設計書.md
+++ b/pg/iret/FO/応募ソルバー画面_設計書.md
@@ -2,15 +2,17 @@
 
 ## 関連課題
 
-* （新規作成のため関連課題なし）
+* なし
 
 ## 機能概要
 
-人材要件に対する応募ソルバーを管理する画面。既存の個人ソルバーやソルバー候補から選択、または新規でソルバー候補を追加することができる。
+人材要件に対する応募ソルバーを管理する画面。
+既存の個人ソルバーやソルバー候補から選択、または新規でソルバー候補を追加することができる。
+選定済み人数の管理やステータス変更も可能。
 
 ## 画面デザイン
 
-※詳細な画面デザインは別途デザインファイルを参照
+※後日添付
 
 ## 利用可能権限
 
@@ -22,36 +24,35 @@
 
 ## 項目定義
 
-
-| 画面項目名 | サイト表記 | 項目種別 | I/O | データ型 | 必須 | 上限 | 初期値 | プレースホルダー | 入力制約 | 備考 |
-|------------|------------|----------|-----|----------|------|------|--------|------------------|----------|------|
-| 案件コード | 案件コード | テキスト | O | string | - | - | - | - | - | 自動表示 |
-| 案件名 | 案件名 | テキスト | O | string | - | - | - | - | - | |
-| 必要人数 | 必要人数 | 数値 | O | number | - | - | - | - | - | X名 |
-| 現在の選定人数 | 選定済み | 数値 | O | number | - | - | 0 | - | - | X名 |
+| 画面項目名 | 項目種別 | I/O | データ型 | 必須 | 初期値 | プレースホルダー | 入力制約 | 備考 |
+|------------|----------|-----|----------|------|--------|------------------|----------|------|
+| 案件コード | テキスト | O | 文字列 |  |  |  | | 自動表示 |
+| 案件名 | テキスト | O | 文字列 |  |  |  | | |
+| 必要人数 | テキスト | O | 数値 |  |  |  | | X名形式で表示 |
+| 現在の選定人数 | テキスト | O | 数値 |  | 0 |  | | X名形式で表示 |
 
 ### 個人ソルバー一覧（セクション）
 
-| 画面項目名 | サイト表記 | 項目種別 | I/O | データ型 | 必須 | 上限 | 初期値 | プレースホルダー | 入力制約 | 備考 |
-|------------|------------|----------|-----|----------|------|------|--------|------------------|----------|------|
-| ソルバーID | ID | テキスト | O | string | - | - | - | - | - | |
-| ソルバー名 | 氏名 | テキスト | O | string | - | - | - | - | - | |
-| メールアドレス | メール | メール | O | string | - | - | - | - | - | |
-| 電話番号 | 電話番号 | テキスト | O | string | - | - | - | - | - | |
-| スキル概要 | スキル | テキスト | O | string | - | 200 | - | - | - | 省略表示 |
-| 単価 | 単価 | 数値 | O | number | - | - | - | - | - | XX万円/月 |
-| ステータス | ステータス | セレクト | I | string | ○ | - | 未選定 | - | - | 未選定/選定済/非選定 |
-| 選択 | 選択 | チェックボックス | I | boolean | - | - | false | - | - | |
+| 画面項目名 | 項目種別 | I/O | データ型 | 必須 | 初期値 | プレースホルダー | 入力制約 | 備考 |
+|------------|----------|-----|----------|------|--------|------------------|----------|------|
+| ソルバーID | テキスト | O | 文字列 |  |  |  | | |
+| ソルバー名 | テキスト | O | 文字列 |  |  |  | | |
+| メールアドレス | テキスト | O | 文字列 |  |  |  | | |
+| 電話番号 | テキスト | O | 文字列 |  |  |  | | |
+| スキル概要 | テキスト | O | 文字列 |  |  |  | 最大200文字 | 省略表示 |
+| 単価 | テキスト | O | 数値 |  |  |  | | XX万円/月形式 |
+| ステータス | セレクトボックス | I | 文字列 | ○ | 未選定 | 選択してください | 未選定/選定済/非選定 | コードマスタ参照 |
+| 選択 | チェックボックス | I | 真偽値 |  | false |  | | |
 
 ### ソルバー候補一覧（セクション）
 
-| 画面項目名 | サイト表記 | 項目種別 | I/O | データ型 | 必須 | 上限 | 初期値 | プレースホルダー | 入力制約 | 備考 |
-|------------|------------|----------|-----|----------|------|------|--------|------------------|----------|------|
-| 候補ID | ID | テキスト | O | string | - | - | - | - | - | |
-| 候補者名 | 氏名 | テキスト | O | string | - | - | - | - | - | |
-| 登録日 | 登録日 | 日付 | O | date | - | - | - | - | - | YYYY/MM/DD |
-| ステータス | ステータス | テキスト | O | string | - | - | - | - | - | 審査中/承認済/却下 |
-| 選択 | 選択 | チェックボックス | I | boolean | - | - | false | - | - | |
+| 画面項目名 | 項目種別 | I/O | データ型 | 必須 | 初期値 | プレースホルダー | 入力制約 | 備考 |
+|------------|----------|-----|----------|------|--------|------------------|----------|------|
+| 候補ID | テキスト | O | 文字列 |  |  |  | | |
+| 候補者名 | テキスト | O | 文字列 |  |  |  | | |
+| 登録日 | テキスト | O | 日付 |  |  |  | | YYYY/MM/DD形式 |
+| ステータス | テキスト | O | 文字列 |  |  |  | | 審査中/承認済/却下 |
+| 選択 | チェックボックス | I | 真偽値 |  | false |  | | |
 
 ## バリデーション
 
@@ -68,35 +69,35 @@
 
 ### メイン画面
 
-| ボタン・リンク名 | サイト表記 | 項目種別 | 遷移先 | 初期状態（活性・非活性） | 備考 |
-|------------------|------------|----------|--------|-------------------------|------|
-| 個人ソルバー＋ | ＋ | ボタン | 応募ソルバー追加ポップアップ | 活性 | 個人ソルバーセクションのヘッダー |
-| ソルバー候補＋ | ＋ | ボタン | ソルバー候補追加ポップアップ | 活性 | ソルバー候補セクションのヘッダー |
-| 編集 | 編集 | ボタン | 個人ソルバー情報詳細（別タブ） | 活性 | 各ソルバー行に表示 |
-| 詳細 | 詳細 | ボタン | ソルバー候補情報詳細（別タブ） | 活性 | 各候補者行に表示 |
-| 変更する | 変更する | ボタン | 応募ソルバー登録完了画面 | 活性 | |
-| 一覧へ戻る | 一覧へ戻る | リンク | 人材要件一覧画面 | 活性 | |
-| キャンセル | キャンセル | ボタン | - | 活性 | 確認ダイアログ表示 |
+| ボタン・リンク名 | 項目種別 | 遷移先 | 初期状態（活性・非活性） | 備考 |
+|------------------|----------|--------|-------------------------|------|
+| 個人ソルバー＋ | ボタン | - | 活性 | ポップアップ表示 |
+| ソルバー候補＋ | ボタン | - | 活性 | ポップアップ表示 |
+| 編集 | ボタン | /solvers/{solverId} | 活性 | 別タブで開く |
+| 詳細 | ボタン | /solver-candidates/{candidateId} | 活性 | 別タブで開く |
+| 変更する | ボタン | - | 活性 | 更新処理実行 |
+| 一覧へ戻る | リンク | /project-requirements | 活性 | |
+| キャンセル | ボタン | - | 活性 | 確認ダイアログ表示 |
 
 ### 応募ソルバー追加ポップアップ
 
-| ボタン・リンク名 | サイト表記 | 項目種別 | 遷移先 | 初期状態（活性・非活性） | 備考 |
-|------------------|------------|----------|--------|-------------------------|------|
-| 既存ソルバーを選択 | 既存ソルバーから選択 | ラジオボタン | - | 活性 | デフォルト選択 |
-| 検索 | 検索 | ボタン | - | 活性 | |
-| 追加 | 追加 | ボタン | - | 非活性 | ソルバー選択時に活性化 |
-| 閉じる | 閉じる | ボタン | - | 活性 | |
+| ボタン・リンク名 | 項目種別 | 遷移先 | 初期状態（活性・非活性） | 備考 |
+|------------------|----------|--------|-------------------------|------|
+| 既存ソルバーを選択 | ラジオボタン | - | 活性 | デフォルト選択 |
+| 検索 | ボタン | - | 活性 | |
+| 追加 | ボタン | - | 非活性 | ソルバー選択時に活性化 |
+| 閉じる | ボタン | - | 活性 | |
 
 ### ソルバー候補追加ポップアップ
 
-| ボタン・リンク名 | サイト表記 | 項目種別 | 遷移先 | 初期状態（活性・非活性） | 備考 |
-|------------------|------------|----------|--------|-------------------------|------|
-| 既存候補を選択 | 既存ソルバー候補から選択 | ラジオボタン | - | 活性 | デフォルト選択 |
-| 新規候補を追加 | 新規ソルバー候補を追加 | ラジオボタン | - | 活性 | |
-| 検索 | 検索 | ボタン | - | 活性 | 既存候補選択時のみ |
-| 追加 | 追加 | ボタン | - | 非活性 | 候補選択時に活性化 |
-| 新規登録 | 新規登録 | ボタン | 新規個人ソルバー申請（別タブ） | 非活性 | 新規候補選択時に活性化 |
-| 閉じる | 閉じる | ボタン | - | 活性 | |
+| ボタン・リンク名 | 項目種別 | 遷移先 | 初期状態（活性・非活性） | 備考 |
+|------------------|----------|--------|-------------------------|------|
+| 既存候補を選択 | ラジオボタン | - | 活性 | デフォルト選択 |
+| 新規候補を追加 | ラジオボタン | - | 活性 | |
+| 検索 | ボタン | - | 活性 | 既存候補選択時のみ |
+| 追加 | ボタン | - | 非活性 | 候補選択時に活性化 |
+| 新規登録 | ボタン | /solver/application | 非活性 | 新規候補選択時に活性化、別タブ |
+| 閉じる | ボタン | - | 活性 | |
 
 ## イベント定義
 
@@ -139,6 +140,7 @@
 1. 人材要件詳細画面から「変更する」ボタンクリック
 2. 応募ソルバー画面へ遷移（要件IDを受け取る）
 3. 初期表示処理
+   - APIコール（GET /api/project-requirements/{requirementId}/applied-solvers）
    - 既存の応募ソルバー一覧を取得
    - 個人ソルバーとソルバー候補を分けて表示
 4. ソルバーの追加/編集
@@ -147,14 +149,14 @@
    - 不要なソルバーの削除
 5. 「変更する」ボタンクリック
    - 更新内容をAPIに送信
-   - 成功時は完了画面へ遷移
+   - 成功時は完了メッセージ表示
 
 ### ポップアップでのソルバー追加フロー
 1. 「＋」ボタンクリック
 2. ポップアップ表示
 3. 既存ソルバーから選択の場合
    - 検索条件入力
-   - 検索実行
+   - 検索実行（GET /api/solvers）
    - 一覧から選択
    - 追加ボタンクリック
    - メイン画面に反映
