--- a/pg/iret/FO/人材要件詳細画面_設計書.md
+++ b/pg/iret/FO/人材要件詳細画面_設計書.md
@@ -52,8 +52,8 @@
 
 | ボタン・リンク名 | 項目種別 | 遷移先 | 初期状態（活性・非活性） | 備考 |
 |------------------|----------|--------|-------------------------|------|
-| 一覧へ戻る | リンク | /project-requirements | 活性 | |
-| 変更する | ボタン | /project-requirements/{requirementId}/applied-solvers | 活性 | ステータスが「完了」の場合は非活性 |
+| 一覧へ戻る | リンク | 人材要件一覧画面 | 活性 | |
+| 変更する | ボタン | 応募ソルバー画面 | 活性 | ステータスが「完了」の場合は非活性 |
 | 案件URL | リンク | {外部URL} | 活性 | 別タブで開く |
 
 ## イベント定義
@@ -67,23 +67,17 @@
 
 ## 利用DB
 
-| 場所（NPF/ PP） | テーブル名 | CRUD | 備考 |
-|-----------------|------------|------|------|
-| NPF | 人材要件マスタ | R | Salesforceから同期 |
-| PP | project_requirements | R | 人材要件詳細情報の参照 |
-| NPF | 案件マスタ | R | 案件情報の参照 |
 
 ## 利用API
 
-- `GET /api/project-requirements/{requirementId}`: 人材要件詳細情報の取得
 
 ## シーケンス・フロー
 
 1. 一覧画面から人材要件Noをクリック
-2. 人材要件詳細画面へ遷移（URLパラメータで人材要件IDを受け取る）
+2. 人材要件詳細画面へ遷移（パラメータで人材要件IDを受け取る）
 3. 初期表示処理
    - ローディング表示
-   - APIコール（GET /api/project-requirements/{requirementId}）
+   - APIコール
    - 詳細データ取得
    - 画面に詳細情報を表示
    - ステータスが「完了」の場合、「変更する」ボタンを非活性化
