応募ソルバー

--- a/pg/iret/FO/応募ソルバー画面_設計書.md
+++ b/pg/iret/FO/応募ソルバー画面_設計書.md
@@ -12,7 +12,7 @@
 
 ## 画面デザイン
 
-※後日添付
+プレゼンテーション1.pdf
 
 ## 利用可能権限
 
@@ -53,6 +53,31 @@
 | 登録日 | テキスト | O | 日付 |  |  |  | | YYYY/MM/DD形式 |
 | ステータス | テキスト | O | 文字列 |  |  |  | | 審査中/承認済/却下 |
 | 選択 | チェックボックス | I | 真偽値 |  | false |  | | |
+
+### 応募ソルバー追加ポップアップ（個人ソルバー）
+
+| 画面項目名 | 項目種別 | I/O | データ型 | 必須 | 初期値 | プレースホルダー | 入力制約 | 備考 |
+|------------|----------|-----|----------|------|--------|------------------|----------|------|
+| 検索キーワード | テキストボックス | I | 文字列 |  |  | キーワードを入力 | 最大100文字 | |
+| スキル | テキストボックス | I | 文字列 |  |  | スキルを入力 | 最大100文字 | |
+| 稼働可能 | チェックボックス | I | 真偽値 |  | false |  | | |
+| ソルバーID | テキスト | O | 文字列 |  |  |  | | 検索結果表示 |
+| ソルバー名 | テキスト | O | 文字列 |  |  |  | | 検索結果表示 |
+| メールアドレス | テキスト | O | 文字列 |  |  |  | | 検索結果表示 |
+| スキル概要 | テキスト | O | 文字列 |  |  |  | | 検索結果表示 |
+| 選択 | ラジオボタン | I | 文字列 |  |  |  | | 単一選択 |
+
+### ソルバー候補追加ポップアップ
+
+| 画面項目名 | 項目種別 | I/O | データ型 | 必須 | 初期値 | プレースホルダー | 入力制約 | 備考 |
+|------------|----------|-----|----------|------|--------|------------------|----------|------|
+| 検索キーワード | テキストボックス | I | 文字列 |  |  | キーワードを入力 | 最大100文字 | 既存候補選択時のみ |
+| ステータス | セレクトボックス | I | 文字列 |  | 全て | 選択してください | 審査中/承認済/却下 | 既存候補選択時のみ |
+| 候補ID | テキスト | O | 文字列 |  |  |  | | 検索結果表示 |
+| 候補者名 | テキスト | O | 文字列 |  |  |  | | 検索結果表示 |
+| 登録日 | テキスト | O | 日付 |  |  |  | | 検索結果表示 |
+| ステータス | テキスト | O | 文字列 |  |  |  | | 検索結果表示 |
+| 選択 | ラジオボタン | I | 文字列 |  |  |  | | 単一選択 |
 
 ## バリデーション
 
