--- a/pg/reidensha/Docs/01_プロジェクト概要/プロジェクト構成説明書.md
+++ b/pg/reidensha/Docs/01_プロジェクト概要/プロジェクト構成説明書.md
@@ -85,12 +85,18 @@ reidensha/                    # プロジェクトルート
 ### 4. プリザンター改善要望一覧 (`/プリザンター改善要望一覧2024.10.7.pdf`)
 
 #### 目的
-プリザンター（Pleasanter）システムに関する改善要望をまとめた文書。
+プリザンター（Pleasanter）システムに関する改善要望をまとめた文書。全13カテゴリ、約50件の改善要望を含む。
 
 #### 重要なポイント
 - **作成日**: 2024年10月7日
-- **内容**: システム改善要望のリスト
-- **形式**: PDF文書
+- **内容**: システム改善要望のリスト（予定表、作業報告書、見積書等）
+- **形式**: PDF文書（Ghostscriptで内容確認済み）
+
+#### 主な要望カテゴリ
+- 予定表機能の拡張（7件）
+- 作業報告書の自動化（5件）
+- 参考見積書の機能強化（7件）
+- 新規：出金伝票テーブル作成（3件）
 
 #### 💡 用語解説
 - **プリザンター（Pleasanter）**: オープンソースのWebデータベースシステム
@@ -130,11 +136,10 @@ reidensha/                    # プロジェクトルート
 
 ## 📚 関連ドキュメント
 
-### 今後作成予定のドキュメント
-- 02_環境構築/環境設定説明書.md
-- 03_業務ツール/労務費計算ツール説明書.md
-- 03_業務ツール/見積書作成ガイド.md
-- 04_システム管理/プリザンター改善要望詳細.md
+### Docs内の関連ドキュメント
+- [03_業務ツール/労務費計算ツール説明書.md](../03_業務ツール/労務費計算ツール説明書.md)
+- [03_業務ツール/見積書作成ガイド.md](../03_業務ツール/見積書作成ガイド.md)
+- [04_システム管理/プリザンター改善要望説明書.md](../04_システム管理/プリザンター改善要望説明書.md)
 
 ---
 
